Test update for #2605: anchors for whitespace removed from html

--- a/test/LaTeXAndHTML/succeed/AccidentalSpacesAfterBeginCode.html
+++ b/test/LaTeXAndHTML/succeed/AccidentalSpacesAfterBeginCode.html
@@ -17,23 +17,15 @@
 \begin{document}
 
 </a
-      ><a name="63"
       >\begin{code}     
-</a
-      ><a name="81" class="Keyword"
+<a name="81" class="Keyword"
       >module</a
-      ><a name="87"
-      > </a
-      ><a name="88" href="AccidentalSpacesAfterBeginCode.html#AccidentalSpacesAfterBeginCode" class="Module"
+      > <a name="88" href="AccidentalSpacesAfterBeginCode.html#AccidentalSpacesAfterBeginCode" class="Module"
       >AccidentalSpacesAfterBeginCode</a
-      ><a name="118"
-      > </a
-      ><a name="119" class="Keyword"
+      > <a name="119" class="Keyword"
       >where</a
-      ><a name="124"
       >
-\end{code}</a
-      ><a name="135" class="Comment"
+\end{code}<a name="135" class="Comment"
       >
 
 \end{document}
