--- a/test/LaTeXAndHTML/succeed/Indenting6.html
+++ b/test/LaTeXAndHTML/succeed/Indenting6.html
@@ -15,224 +15,128 @@
 \begin{document}
 
 </a
-      ><a name="61"
       >\begin{code}
-</a
-      ><a name="74" class="Keyword"
+<a name="74" class="Keyword"
       >record</a
-      ><a name="80"
-      > </a
-      ><a name="Sigma" href="Indenting6.html#Sigma" class="Record"
+      > <a name="Sigma" href="Indenting6.html#Sigma" class="Record"
       >Sigma</a
-      ><a name="86"
-      > </a
-      ><a name="87" class="Symbol"
+      > <a name="87" class="Symbol"
       >(</a
       ><a name="88" href="Indenting6.html#88" class="Bound"
       >A</a
-      ><a name="89"
-      > </a
-      ><a name="90" class="Symbol"
+      > <a name="90" class="Symbol"
       >:</a
-      ><a name="91"
-      > </a
-      ><a name="92" class="PrimitiveType"
+      > <a name="92" class="PrimitiveType"
       >Set</a
       ><a name="95" class="Symbol"
       >)</a
-      ><a name="96"
-      > </a
-      ><a name="97" class="Symbol"
+      > <a name="97" class="Symbol"
       >(</a
       ><a name="98" href="Indenting6.html#98" class="Bound"
       >B</a
-      ><a name="99"
-      > </a
-      ><a name="100" class="Symbol"
+      > <a name="100" class="Symbol"
       >:</a
-      ><a name="101"
-      > </a
-      ><a name="102" href="Indenting6.html#88" class="Bound"
+      > <a name="102" href="Indenting6.html#88" class="Bound"
       >A</a
-      ><a name="103"
-      > </a
-      ><a name="104" class="Symbol"
+      > <a name="104" class="Symbol"
       >&#8594;</a
-      ><a name="105"
-      > </a
-      ><a name="106" class="PrimitiveType"
+      > <a name="106" class="PrimitiveType"
       >Set</a
       ><a name="109" class="Symbol"
       >)</a
-      ><a name="110"
-      > </a
-      ><a name="111" class="Symbol"
+      > <a name="111" class="Symbol"
       >:</a
-      ><a name="112"
-      > </a
-      ><a name="113" class="PrimitiveType"
+      > <a name="113" class="PrimitiveType"
       >Set</a
-      ><a name="116"
-      > </a
-      ><a name="117" class="Keyword"
+      > <a name="117" class="Keyword"
       >where</a
-      ><a name="122"
       >
-  </a
-      ><a name="125" class="Keyword"
+  <a name="125" class="Keyword"
       >constructor</a
-      ><a name="136"
-      > </a
-      ><a name="Sigma._,_" href="Indenting6.html#Sigma._,_" class="InductiveConstructor Operator"
+      > <a name="Sigma._,_" href="Indenting6.html#Sigma._,_" class="InductiveConstructor Operator"
       >_,_</a
-      ><a name="140"
       >
-  </a
-      ><a name="143" class="Keyword"
+  <a name="143" class="Keyword"
       >field</a
-      ><a name="148"
       >
-    </a
-      ><a name="Sigma.proj&#8321;" href="Indenting6.html#Sigma.proj&#8321;" class="Field"
+    <a name="Sigma.proj&#8321;" href="Indenting6.html#Sigma.proj&#8321;" class="Field"
       >proj&#8321;</a
-      ><a name="158"
-      > </a
-      ><a name="159" class="Symbol"
+      > <a name="159" class="Symbol"
       >:</a
-      ><a name="160"
-      > </a
-      ><a name="161" href="Indenting6.html#88" class="Bound"
+      > <a name="161" href="Indenting6.html#88" class="Bound"
       >A</a
-      ><a name="162"
       >
-    </a
-      ><a name="Sigma.proj&#8322;" href="Indenting6.html#Sigma.proj&#8322;" class="Field"
+    <a name="Sigma.proj&#8322;" href="Indenting6.html#Sigma.proj&#8322;" class="Field"
       >proj&#8322;</a
-      ><a name="172"
-      > </a
-      ><a name="173" class="Symbol"
+      > <a name="173" class="Symbol"
       >:</a
-      ><a name="174"
-      > </a
-      ><a name="175" href="Indenting6.html#98" class="Bound"
+      > <a name="175" href="Indenting6.html#98" class="Bound"
       >B</a
-      ><a name="176"
-      > </a
-      ><a name="177" href="Indenting6.html#Sigma.proj&#8321;" class="Field"
+      > <a name="177" href="Indenting6.html#Sigma.proj&#8321;" class="Field"
       >proj&#8321;</a
-      ><a name="182"
       >
 
-</a
-      ><a name="184" class="Keyword"
+<a name="184" class="Keyword"
       >open</a
-      ><a name="188"
-      > </a
-      ><a name="189" href="Indenting6.html#Sigma" class="Module"
+      > <a name="189" href="Indenting6.html#Sigma" class="Module"
       >Sigma</a
-      ><a name="194"
-      > </a
-      ><a name="195" class="Keyword"
+      > <a name="195" class="Keyword"
       >public</a
-      ><a name="201"
       >
-\end{code}</a
-      ><a name="212" class="Comment"
+\end{code}<a name="212" class="Comment"
       >
 
 </a
-      ><a name="214"
       >\begin{code}
-</a
-      ><a name="227" class="Keyword"
+<a name="227" class="Keyword"
       >record</a
-      ><a name="233"
-      > </a
-      ><a name="Equiv" href="Indenting6.html#Equiv" class="Record"
+      > <a name="Equiv" href="Indenting6.html#Equiv" class="Record"
       >Equiv</a
-      ><a name="239"
-      > </a
-      ><a name="240" class="Symbol"
+      > <a name="240" class="Symbol"
       >(</a
       ><a name="241" href="Indenting6.html#241" class="Bound"
       >X</a
-      ><a name="242"
-      > </a
-      ><a name="243" href="Indenting6.html#243" class="Bound"
+      > <a name="243" href="Indenting6.html#243" class="Bound"
       >Y</a
-      ><a name="244"
-      > </a
-      ><a name="245" class="Symbol"
+      > <a name="245" class="Symbol"
       >:</a
-      ><a name="246"
-      > </a
-      ><a name="247" class="PrimitiveType"
+      > <a name="247" class="PrimitiveType"
       >Set</a
       ><a name="250" class="Symbol"
       >)</a
-      ><a name="251"
-      > </a
-      ><a name="252" class="Symbol"
+      > <a name="252" class="Symbol"
       >:</a
-      ><a name="253"
-      > </a
-      ><a name="254" class="PrimitiveType"
+      > <a name="254" class="PrimitiveType"
       >Set</a
-      ><a name="257"
-      > </a
-      ><a name="258" class="Keyword"
+      > <a name="258" class="Keyword"
       >where</a
-      ><a name="263"
       >
-  </a
-      ><a name="266" class="Keyword"
+  <a name="266" class="Keyword"
       >field</a
-      ><a name="271"
       >
-    </a
-      ><a name="Equiv.to" href="Indenting6.html#Equiv.to" class="Field"
+    <a name="Equiv.to" href="Indenting6.html#Equiv.to" class="Field"
       >to</a
-      ><a name="278"
-      >    </a
-      ><a name="282" class="Symbol"
+      >    <a name="282" class="Symbol"
       >:</a
-      ><a name="283"
-      > </a
-      ><a name="284" href="Indenting6.html#241" class="Bound"
+      > <a name="284" href="Indenting6.html#241" class="Bound"
       >X</a
-      ><a name="285"
-      > </a
-      ><a name="286" class="Symbol"
+      > <a name="286" class="Symbol"
       >&#8594;</a
-      ><a name="287"
-      > </a
-      ><a name="288" href="Indenting6.html#243" class="Bound"
+      > <a name="288" href="Indenting6.html#243" class="Bound"
       >Y</a
-      ><a name="289"
       >
-    </a
-      ><a name="Equiv.from" href="Indenting6.html#Equiv.from" class="Field"
+    <a name="Equiv.from" href="Indenting6.html#Equiv.from" class="Field"
       >from</a
-      ><a name="298"
-      >  </a
-      ><a name="300" class="Symbol"
+      >  <a name="300" class="Symbol"
       >:</a
-      ><a name="301"
-      > </a
-      ><a name="302" href="Indenting6.html#243" class="Bound"
+      > <a name="302" href="Indenting6.html#243" class="Bound"
       >Y</a
-      ><a name="303"
-      > </a
-      ><a name="304" class="Symbol"
+      > <a name="304" class="Symbol"
       >&#8594;</a
-      ><a name="305"
-      > </a
-      ><a name="306" href="Indenting6.html#241" class="Bound"
+      > <a name="306" href="Indenting6.html#241" class="Bound"
       >X</a
-      ><a name="307"
       >
-\end{code}</a
-      ><a name="318" class="Comment"
+\end{code}<a name="318" class="Comment"
       >
 
 \end{document}
