--- a/test/LaTeXAndHTML/succeed/InfixDeclaration.html
+++ b/test/LaTeXAndHTML/succeed/InfixDeclaration.html
@@ -16,164 +16,98 @@
 \begin{document}
 
 </a
-      ><a name="62"
       >\begin{code}
-</a
-      ><a name="75" class="Keyword"
+<a name="75" class="Keyword"
       >module</a
-      ><a name="81"
-      > </a
-      ><a name="82" href="InfixDeclaration.html#InfixDeclaration" class="Module"
+      > <a name="82" href="InfixDeclaration.html#InfixDeclaration" class="Module"
       >InfixDeclaration</a
-      ><a name="98"
-      > </a
-      ><a name="99" class="Keyword"
+      > <a name="99" class="Keyword"
       >where</a
-      ><a name="104"
       >
 
-</a
-      ><a name="106" class="Keyword"
+<a name="106" class="Keyword"
       >infix</a
-      ><a name="111"
-      > </a
-      ><a name="112" class="Number"
+      > <a name="112" class="Number"
       >5</a
-      ><a name="113"
-      > </a
-      ><a name="_&gt;&gt;_" href="InfixDeclaration.html#_&gt;&gt;_" class="Datatype Operator"
+      > <a name="_&gt;&gt;_" href="InfixDeclaration.html#_&gt;&gt;_" class="Datatype Operator"
       >_&gt;&gt;_</a
-      ><a name="118"
-      > </a
-      ><a name="_&lt;&lt;_" href="InfixDeclaration.html#_&lt;&lt;_" class="Datatype Operator"
+      > <a name="_&lt;&lt;_" href="InfixDeclaration.html#_&lt;&lt;_" class="Datatype Operator"
       >_&lt;&lt;_</a
-      ><a name="123"
       >
 
-</a
-      ><a name="125" class="Keyword"
+<a name="125" class="Keyword"
       >data</a
-      ><a name="129"
-      > </a
-      ><a name="_&gt;&gt;_" href="InfixDeclaration.html#_&gt;&gt;_" class="Datatype Operator"
+      > <a name="_&gt;&gt;_" href="InfixDeclaration.html#_&gt;&gt;_" class="Datatype Operator"
       >_&gt;&gt;_</a
-      ><a name="134"
-      > </a
-      ><a name="135" class="Symbol"
+      > <a name="135" class="Symbol"
       >:</a
-      ><a name="136"
-      > </a
-      ><a name="137" class="PrimitiveType"
+      > <a name="137" class="PrimitiveType"
       >Set</a
-      ><a name="140"
-      > </a
-      ><a name="141" class="Keyword"
+      > <a name="141" class="Keyword"
       >where</a
-      ><a name="146"
       >
-</a
-      ><a name="147" class="Keyword"
+<a name="147" class="Keyword"
       >data</a
-      ><a name="151"
-      > </a
-      ><a name="_&lt;&lt;_" href="InfixDeclaration.html#_&lt;&lt;_" class="Datatype Operator"
+      > <a name="_&lt;&lt;_" href="InfixDeclaration.html#_&lt;&lt;_" class="Datatype Operator"
       >_&lt;&lt;_</a
-      ><a name="156"
-      > </a
-      ><a name="157" class="Symbol"
+      > <a name="157" class="Symbol"
       >:</a
-      ><a name="158"
-      > </a
-      ><a name="159" class="PrimitiveType"
+      > <a name="159" class="PrimitiveType"
       >Set</a
-      ><a name="162"
-      > </a
-      ><a name="163" class="Keyword"
+      > <a name="163" class="Keyword"
       >where</a
-      ><a name="168"
       >
 
-\end{code}</a
-      ><a name="180" class="Comment"
+\end{code}<a name="180" class="Comment"
       >
 
 Let's try some infix declaration with surrounding text.
 
 </a
-      ><a name="239"
       >\begin{code}
-</a
-      ><a name="252" class="Keyword"
+<a name="252" class="Keyword"
       >module</a
-      ><a name="258"
-      > </a
-      ><a name="SurroundingText" href="InfixDeclaration.html#SurroundingText" class="Module"
+      > <a name="SurroundingText" href="InfixDeclaration.html#SurroundingText" class="Module"
       >SurroundingText</a
-      ><a name="274"
-      > </a
-      ><a name="275" class="Keyword"
+      > <a name="275" class="Keyword"
       >where</a
-      ><a name="280"
       >
 
-\end{code}</a
-      ><a name="292" class="Comment"
+\end{code}<a name="292" class="Comment"
       >
 
 In the following, we declare the fixity of two operators.
 
 </a
-      ><a name="353"
       >\begin{code}
-  </a
-      ><a name="368" class="Keyword"
+  <a name="368" class="Keyword"
       >infix</a
-      ><a name="373"
-      > </a
-      ><a name="374" class="Number"
+      > <a name="374" class="Number"
       >5</a
-      ><a name="375"
-      > </a
-      ><a name="SurroundingText._+_" href="InfixDeclaration.html#SurroundingText._+_" class="Postulate Operator"
+      > <a name="SurroundingText._+_" href="InfixDeclaration.html#SurroundingText._+_" class="Postulate Operator"
       >_+_</a
-      ><a name="379"
-      > </a
-      ><a name="SurroundingText._*_" href="InfixDeclaration.html#SurroundingText._*_" class="Postulate Operator"
+      > <a name="SurroundingText._*_" href="InfixDeclaration.html#SurroundingText._*_" class="Postulate Operator"
       >_*_</a
-      ><a name="383"
       >
-\end{code}</a
-      ><a name="394" class="Comment"
+\end{code}<a name="394" class="Comment"
       >
 
 A fixity declaration can preceed the actual declaration of the names.
 
 </a
-      ><a name="467"
       >\begin{code}
-  </a
-      ><a name="482" class="Keyword"
+  <a name="482" class="Keyword"
       >postulate</a
-      ><a name="491"
-      > </a
-      ><a name="SurroundingText._+_" href="InfixDeclaration.html#SurroundingText._+_" class="Postulate Operator"
+      > <a name="SurroundingText._+_" href="InfixDeclaration.html#SurroundingText._+_" class="Postulate Operator"
       >_+_</a
-      ><a name="495"
-      > </a
-      ><a name="SurroundingText._*_" href="InfixDeclaration.html#SurroundingText._*_" class="Postulate Operator"
+      > <a name="SurroundingText._*_" href="InfixDeclaration.html#SurroundingText._*_" class="Postulate Operator"
       >_*_</a
-      ><a name="499"
-      > </a
-      ><a name="500" class="Symbol"
+      > <a name="500" class="Symbol"
       >:</a
-      ><a name="501"
-      > </a
-      ><a name="502" class="PrimitiveType"
+      > <a name="502" class="PrimitiveType"
       >Set</a
-      ><a name="505"
       >
-\end{code}</a
-      ><a name="516" class="Comment"
+\end{code}<a name="516" class="Comment"
       >
 
 \end{document}
