--- a/test/LaTeXAndHTML/succeed/Issue2077-1.html
+++ b/test/LaTeXAndHTML/succeed/Issue2077-1.html
@@ -17,27 +17,17 @@
 
 \AgdaHide{
 Blip</a
-      ><a name="77"
       >\begin{code}
-</a
-      ><a name="90" class="Keyword"
+<a name="90" class="Keyword"
       >postulate</a
-      ><a name="99"
-      > </a
-      ><a name="A" href="Issue2077-1.html#A" class="Postulate"
+      > <a name="A" href="Issue2077-1.html#A" class="Postulate"
       >A</a
-      ><a name="101"
-      > </a
-      ><a name="102" class="Symbol"
+      > <a name="102" class="Symbol"
       >:</a
-      ><a name="103"
-      > </a
-      ><a name="104" class="PrimitiveType"
+      > <a name="104" class="PrimitiveType"
       >Set</a
-      ><a name="107"
       >
-\end{code}</a
-      ><a name="118" class="Comment"
+\end{code}<a name="118" class="Comment"
       >}Blop
 
 \end{document}
