--- a/test/LaTeXAndHTML/succeed/Issue2077-2.html
+++ b/test/LaTeXAndHTML/succeed/Issue2077-2.html
@@ -17,27 +17,17 @@
 
 \AgdaHide{
 </a
-      ><a name="73"
       >\begin{code}
-</a
-      ><a name="86" class="Keyword"
+<a name="86" class="Keyword"
       >postulate</a
-      ><a name="95"
-      > </a
-      ><a name="A" href="Issue2077-2.html#A" class="Postulate"
+      > <a name="A" href="Issue2077-2.html#A" class="Postulate"
       >A</a
-      ><a name="97"
-      > </a
-      ><a name="98" class="Symbol"
+      > <a name="98" class="Symbol"
       >:</a
-      ><a name="99"
-      > </a
-      ><a name="100" class="PrimitiveType"
+      > <a name="100" class="PrimitiveType"
       >Set</a
-      ><a name="103"
       >
-\end{code}</a
-      ><a name="114" class="Comment"
+\end{code}<a name="114" class="Comment"
       >}
 
 \end{document}
