--- a/test/LaTeXAndHTML/succeed/Issue2588.html
+++ b/test/LaTeXAndHTML/succeed/Issue2588.html
@@ -17,30 +17,20 @@
 \begin{document}
 
 </a
-      ><a name="63"
       >\begin{code}
-</a
-      ><a name="76" class="Keyword"
+<a name="76" class="Keyword"
       >module</a
-      ><a name="82"
-      > </a
-      ><a name="83" href="Issue2588.html#Issue2588" class="Module"
+      > <a name="83" href="Issue2588.html#Issue2588" class="Module"
       >Issue2588</a
-      ><a name="92"
-      > </a
-      ><a name="93" class="Keyword"
+      > <a name="93" class="Keyword"
       >where</a
-      ><a name="98"
       >
 
-</a
-      ><a name="100" class="Comment"
+<a name="100" class="Comment"
       >{-
 -}</a
-      ><a name="105"
       >
-\end{code}</a
-      ><a name="116" class="Comment"
+\end{code}<a name="116" class="Comment"
       >
 
 \end{document}
