--- a/test/LaTeXAndHTML/succeed/Issue2604.html
+++ b/test/LaTeXAndHTML/succeed/Issue2604.html
@@ -11,284 +11,158 @@
   ><pre
     ><a name="1" class="Comment"
       >-- Andreas, 2017-06-16, issue #2604:</a
-      ><a name="37"
       >
-</a
-      ><a name="38" class="Comment"
+<a name="38" class="Comment"
       >-- Symbolic anchors in generated HTML.</a
-      ><a name="76"
       >
 
-</a
-      ><a name="78" class="Keyword"
+<a name="78" class="Keyword"
       >module</a
-      ><a name="84"
-      > </a
-      ><a name="85" href="Issue2604.html#Issue2604" class="Module"
+      > <a name="85" href="Issue2604.html#Issue2604" class="Module"
       >Issue2604</a
-      ><a name="94"
-      > </a
-      ><a name="95" class="Keyword"
+      > <a name="95" class="Keyword"
       >where</a
-      ><a name="100"
       >
 
-</a
-      ><a name="test1" href="Issue2604.html#test1" class="Function"
+<a name="test1" href="Issue2604.html#test1" class="Function"
       >test1</a
-      ><a name="107"
-      > </a
-      ><a name="108" class="Symbol"
+      > <a name="108" class="Symbol"
       >:</a
-      ><a name="109"
-      > </a
-      ><a name="110" class="PrimitiveType"
+      > <a name="110" class="PrimitiveType"
       >Set&#8321;</a
-      ><a name="114"
-      >  </a
-      ><a name="116" class="Comment"
+      >  <a name="116" class="Comment"
       >-- Symbolic anchor</a
-      ><a name="134"
       >
-</a
-      ><a name="135" href="Issue2604.html#test1" class="Function"
+<a name="135" href="Issue2604.html#test1" class="Function"
       >test1</a
-      ><a name="140"
-      > </a
-      ><a name="141" class="Symbol"
+      > <a name="141" class="Symbol"
       >=</a
-      ><a name="142"
-      > </a
-      ><a name="143" href="Issue2604.html#157" class="Function"
+      > <a name="143" href="Issue2604.html#157" class="Function"
       >bla</a
-      ><a name="146"
       >
-  </a
-      ><a name="149" class="Keyword"
+  <a name="149" class="Keyword"
       >where</a
-      ><a name="154"
       >
-  </a
-      ><a name="157" href="Issue2604.html#157" class="Function"
+  <a name="157" href="Issue2604.html#157" class="Function"
       >bla</a
-      ><a name="160"
-      > </a
-      ><a name="161" class="Symbol"
+      > <a name="161" class="Symbol"
       >=</a
-      ><a name="162"
-      > </a
-      ><a name="163" class="PrimitiveType"
+      > <a name="163" class="PrimitiveType"
       >Set</a
-      ><a name="166"
-      >   </a
-      ><a name="169" class="Comment"
+      >   <a name="169" class="Comment"
       >-- Position anchor</a
-      ><a name="187"
       >
 
-</a
-      ><a name="test2" href="Issue2604.html#test2" class="Function"
+<a name="test2" href="Issue2604.html#test2" class="Function"
       >test2</a
-      ><a name="194"
-      > </a
-      ><a name="195" class="Symbol"
+      > <a name="195" class="Symbol"
       >:</a
-      ><a name="196"
-      > </a
-      ><a name="197" class="PrimitiveType"
+      > <a name="197" class="PrimitiveType"
       >Set&#8321;</a
-      ><a name="201"
-      >  </a
-      ><a name="203" class="Comment"
+      >  <a name="203" class="Comment"
       >-- Symbolic anchor</a
-      ><a name="221"
       >
-</a
-      ><a name="222" href="Issue2604.html#test2" class="Function"
+<a name="222" href="Issue2604.html#test2" class="Function"
       >test2</a
-      ><a name="227"
-      > </a
-      ><a name="228" class="Symbol"
+      > <a name="228" class="Symbol"
       >=</a
-      ><a name="229"
-      > </a
-      ><a name="230" href="Issue2604.html#244" class="Function"
+      > <a name="230" href="Issue2604.html#244" class="Function"
       >bla</a
-      ><a name="233"
       >
-  </a
-      ><a name="236" class="Keyword"
+  <a name="236" class="Keyword"
       >where</a
-      ><a name="241"
       >
-  </a
-      ><a name="244" href="Issue2604.html#244" class="Function"
+  <a name="244" href="Issue2604.html#244" class="Function"
       >bla</a
-      ><a name="247"
-      > </a
-      ><a name="248" class="Symbol"
+      > <a name="248" class="Symbol"
       >=</a
-      ><a name="249"
-      > </a
-      ><a name="250" class="PrimitiveType"
+      > <a name="250" class="PrimitiveType"
       >Set</a
-      ><a name="253"
-      >   </a
-      ><a name="256" class="Comment"
+      >   <a name="256" class="Comment"
       >-- Position anchor</a
-      ><a name="274"
       >
 
-</a
-      ><a name="test3" href="Issue2604.html#test3" class="Function"
+<a name="test3" href="Issue2604.html#test3" class="Function"
       >test3</a
-      ><a name="281"
-      > </a
-      ><a name="282" class="Symbol"
+      > <a name="282" class="Symbol"
       >:</a
-      ><a name="283"
-      > </a
-      ><a name="284" class="PrimitiveType"
+      > <a name="284" class="PrimitiveType"
       >Set&#8321;</a
-      ><a name="288"
-      >  </a
-      ><a name="290" class="Comment"
+      >  <a name="290" class="Comment"
       >-- Symbolic anchor</a
-      ><a name="308"
       >
-</a
-      ><a name="309" href="Issue2604.html#test3" class="Function"
+<a name="309" href="Issue2604.html#test3" class="Function"
       >test3</a
-      ><a name="314"
-      > </a
-      ><a name="315" class="Symbol"
+      > <a name="315" class="Symbol"
       >=</a
-      ><a name="316"
-      > </a
-      ><a name="317" href="Issue2604.html#M.bla" class="Function"
+      > <a name="317" href="Issue2604.html#M.bla" class="Function"
       >bla</a
-      ><a name="320"
       >
-  </a
-      ><a name="323" class="Keyword"
+  <a name="323" class="Keyword"
       >module</a
-      ><a name="329"
-      > </a
-      ><a name="M" href="Issue2604.html#M" class="Module"
+      > <a name="M" href="Issue2604.html#M" class="Module"
       >M</a
-      ><a name="331"
-      > </a
-      ><a name="332" class="Keyword"
+      > <a name="332" class="Keyword"
       >where</a
-      ><a name="337"
       >
-  </a
-      ><a name="M.bla" href="Issue2604.html#M.bla" class="Function"
+  <a name="M.bla" href="Issue2604.html#M.bla" class="Function"
       >bla</a
-      ><a name="343"
-      > </a
-      ><a name="344" class="Symbol"
+      > <a name="344" class="Symbol"
       >=</a
-      ><a name="345"
-      > </a
-      ><a name="346" class="PrimitiveType"
+      > <a name="346" class="PrimitiveType"
       >Set</a
-      ><a name="349"
-      >  </a
-      ><a name="351" class="Comment"
+      >  <a name="351" class="Comment"
       >-- Symbolic anchor</a
-      ><a name="369"
       >
 
-</a
-      ><a name="371" class="Keyword"
+<a name="371" class="Keyword"
       >module</a
-      ><a name="377"
-      > </a
-      ><a name="NamedModule" href="Issue2604.html#NamedModule" class="Module"
+      > <a name="NamedModule" href="Issue2604.html#NamedModule" class="Module"
       >NamedModule</a
-      ><a name="389"
-      > </a
-      ><a name="390" class="Keyword"
+      > <a name="390" class="Keyword"
       >where</a
-      ><a name="395"
       >
-  </a
-      ><a name="NamedModule.test4" href="Issue2604.html#NamedModule.test4" class="Function"
+  <a name="NamedModule.test4" href="Issue2604.html#NamedModule.test4" class="Function"
       >test4</a
-      ><a name="403"
-      > </a
-      ><a name="404" class="Symbol"
+      > <a name="404" class="Symbol"
       >:</a
-      ><a name="405"
-      > </a
-      ><a name="406" class="PrimitiveType"
+      > <a name="406" class="PrimitiveType"
       >Set&#8321;</a
-      ><a name="410"
-      >  </a
-      ><a name="412" class="Comment"
+      >  <a name="412" class="Comment"
       >-- Symbolic anchor</a
-      ><a name="430"
       >
-  </a
-      ><a name="433" href="Issue2604.html#NamedModule.test4" class="Function"
+  <a name="433" href="Issue2604.html#NamedModule.test4" class="Function"
       >test4</a
-      ><a name="438"
-      > </a
-      ><a name="439" class="Symbol"
+      > <a name="439" class="Symbol"
       >=</a
-      ><a name="440"
-      > </a
-      ><a name="441" href="Issue2604.html#M.bla" class="Function"
+      > <a name="441" href="Issue2604.html#M.bla" class="Function"
       >M.bla</a
-      ><a name="446"
       >
 
-</a
-      ><a name="448" class="Keyword"
+<a name="448" class="Keyword"
       >module</a
-      ><a name="454"
-      > </a
-      ><a name="455" href="Issue2604.html#455" class="Module"
+      > <a name="455" href="Issue2604.html#455" class="Module"
       >_</a
-      ><a name="456"
-      > </a
-      ><a name="457" class="Keyword"
+      > <a name="457" class="Keyword"
       >where</a
-      ><a name="462"
       >
-  </a
-      ><a name="465" href="Issue2604.html#465" class="Function"
+  <a name="465" href="Issue2604.html#465" class="Function"
       >test5</a
-      ><a name="470"
-      > </a
-      ><a name="471" class="Symbol"
+      > <a name="471" class="Symbol"
       >:</a
-      ><a name="472"
-      > </a
-      ><a name="473" class="PrimitiveType"
+      > <a name="473" class="PrimitiveType"
       >Set&#8321;</a
-      ><a name="477"
-      >  </a
-      ><a name="479" class="Comment"
+      >  <a name="479" class="Comment"
       >-- Position anchor</a
-      ><a name="497"
       >
-  </a
-      ><a name="500" href="Issue2604.html#465" class="Function"
+  <a name="500" href="Issue2604.html#465" class="Function"
       >test5</a
-      ><a name="505"
-      > </a
-      ><a name="506" class="Symbol"
+      > <a name="506" class="Symbol"
       >=</a
-      ><a name="507"
-      > </a
-      ><a name="508" href="Issue2604.html#M.bla" class="Function"
+      > <a name="508" href="Issue2604.html#M.bla" class="Function"
       >M.bla</a
-      ><a name="513"
       >
-</a
-      ></pre
+</pre
     ></body
   ></html
 >
