--- a/test/LaTeXAndHTML/succeed/Legacy-AgdaIndent.html
+++ b/test/LaTeXAndHTML/succeed/Legacy-AgdaIndent.html
@@ -20,28 +20,18 @@
 \begin{document}
 
 </a
-      ><a name="162"
       >\begin{code}
-</a
-      ><a name="175" class="Keyword"
+<a name="175" class="Keyword"
       >postulate</a
-      ><a name="184"
       >
-  </a
-      ><a name="Whatever" href="Legacy-AgdaIndent.html#Whatever" class="Postulate"
+  <a name="Whatever" href="Legacy-AgdaIndent.html#Whatever" class="Postulate"
       >Whatever</a
-      ><a name="195"
-      > </a
-      ><a name="196" class="Symbol"
+      > <a name="196" class="Symbol"
       >:</a
-      ><a name="197"
-      > </a
-      ><a name="198" class="PrimitiveType"
+      > <a name="198" class="PrimitiveType"
       >Set</a
-      ><a name="201"
       >
-\end{code}</a
-      ><a name="212" class="Comment"
+\end{code}<a name="212" class="Comment"
       >
 
 \end{document}
