--- a/test/LaTeXAndHTML/succeed/Links.html
+++ b/test/LaTeXAndHTML/succeed/Links.html
@@ -18,65 +18,37 @@
 \AgdaTarget{&#8469;}
 \AgdaTarget{zero}
 </a
-      ><a name="123"
       >\begin{code}
-</a
-      ><a name="136" class="Keyword"
+<a name="136" class="Keyword"
       >data</a
-      ><a name="140"
-      > </a
-      ><a name="&#8469;" href="Links.html#&#8469;" class="Datatype"
+      > <a name="&#8469;" href="Links.html#&#8469;" class="Datatype"
       >&#8469;</a
-      ><a name="142"
-      > </a
-      ><a name="143" class="Symbol"
+      > <a name="143" class="Symbol"
       >:</a
-      ><a name="144"
-      > </a
-      ><a name="145" class="PrimitiveType"
+      > <a name="145" class="PrimitiveType"
       >Set</a
-      ><a name="148"
-      > </a
-      ><a name="149" class="Keyword"
+      > <a name="149" class="Keyword"
       >where</a
-      ><a name="154"
       >
-  </a
-      ><a name="&#8469;.zero" href="Links.html#&#8469;.zero" class="InductiveConstructor"
+  <a name="&#8469;.zero" href="Links.html#&#8469;.zero" class="InductiveConstructor"
       >zero</a
-      ><a name="161"
-      >  </a
-      ><a name="163" class="Symbol"
+      >  <a name="163" class="Symbol"
       >:</a
-      ><a name="164"
-      > </a
-      ><a name="165" href="Links.html#&#8469;" class="Datatype"
+      > <a name="165" href="Links.html#&#8469;" class="Datatype"
       >&#8469;</a
-      ><a name="166"
       >
-  </a
-      ><a name="&#8469;.suc" href="Links.html#&#8469;.suc" class="InductiveConstructor"
+  <a name="&#8469;.suc" href="Links.html#&#8469;.suc" class="InductiveConstructor"
       >suc</a
-      ><a name="172"
-      >   </a
-      ><a name="175" class="Symbol"
+      >   <a name="175" class="Symbol"
       >:</a
-      ><a name="176"
-      > </a
-      ><a name="177" href="Links.html#&#8469;" class="Datatype"
+      > <a name="177" href="Links.html#&#8469;" class="Datatype"
       >&#8469;</a
-      ><a name="178"
-      > </a
-      ><a name="179" class="Symbol"
+      > <a name="179" class="Symbol"
       >&#8594;</a
-      ><a name="180"
-      > </a
-      ><a name="181" href="Links.html#&#8469;" class="Datatype"
+      > <a name="181" href="Links.html#&#8469;" class="Datatype"
       >&#8469;</a
-      ><a name="182"
       >
-\end{code}</a
-      ><a name="193" class="Comment"
+\end{code}<a name="193" class="Comment"
       >
 
 See next page for how to define \AgdaFunction{two} (doesn't turn into a
@@ -88,48 +60,30 @@ manually though; \hyperlink{two}{\AgdaDatatype{two}}.
 \AgdaTarget{two}
 \hypertarget{two}{}
 </a
-      ><a name="434"
       >\begin{code}
-</a
-      ><a name="two" href="Links.html#two" class="Function"
+<a name="two" href="Links.html#two" class="Function"
       >two</a
-      ><a name="450"
-      > </a
-      ><a name="451" class="Symbol"
+      > <a name="451" class="Symbol"
       >:</a
-      ><a name="452"
-      > </a
-      ><a name="453" href="Links.html#&#8469;" class="Datatype"
+      > <a name="453" href="Links.html#&#8469;" class="Datatype"
       >&#8469;</a
-      ><a name="454"
       >
-</a
-      ><a name="455" href="Links.html#two" class="Function"
+<a name="455" href="Links.html#two" class="Function"
       >two</a
-      ><a name="458"
-      > </a
-      ><a name="459" class="Symbol"
+      > <a name="459" class="Symbol"
       >=</a
-      ><a name="460"
-      > </a
-      ><a name="461" href="Links.html#&#8469;.suc" class="InductiveConstructor"
+      > <a name="461" href="Links.html#&#8469;.suc" class="InductiveConstructor"
       >suc</a
-      ><a name="464"
-      > </a
-      ><a name="465" class="Symbol"
+      > <a name="465" class="Symbol"
       >(</a
       ><a name="466" href="Links.html#&#8469;.suc" class="InductiveConstructor"
       >suc</a
-      ><a name="469"
-      > </a
-      ><a name="470" href="Links.html#&#8469;.zero" class="InductiveConstructor"
+      > <a name="470" href="Links.html#&#8469;.zero" class="InductiveConstructor"
       >zero</a
       ><a name="474" class="Symbol"
       >)</a
-      ><a name="475"
       >
-\end{code}</a
-      ><a name="486" class="Comment"
+\end{code}<a name="486" class="Comment"
       >
 
 \AgdaInductiveConstructor{zero} is of type
@@ -142,48 +96,28 @@ Now that the target for \AgdaFunction{two} has been defined the link
 works automatically.
 
 </a
-      ><a name="750"
       >\begin{code}
-</a
-      ><a name="763" class="Keyword"
+<a name="763" class="Keyword"
       >data</a
-      ><a name="767"
-      > </a
-      ><a name="Bool" href="Links.html#Bool" class="Datatype"
+      > <a name="Bool" href="Links.html#Bool" class="Datatype"
       >Bool</a
-      ><a name="772"
-      > </a
-      ><a name="773" class="Symbol"
+      > <a name="773" class="Symbol"
       >:</a
-      ><a name="774"
-      > </a
-      ><a name="775" class="PrimitiveType"
+      > <a name="775" class="PrimitiveType"
       >Set</a
-      ><a name="778"
-      > </a
-      ><a name="779" class="Keyword"
+      > <a name="779" class="Keyword"
       >where</a
-      ><a name="784"
       >
-  </a
-      ><a name="Bool.true" href="Links.html#Bool.true" class="InductiveConstructor"
+  <a name="Bool.true" href="Links.html#Bool.true" class="InductiveConstructor"
       >true</a
-      ><a name="791"
-      > </a
-      ><a name="Bool.false" href="Links.html#Bool.false" class="InductiveConstructor"
+      > <a name="Bool.false" href="Links.html#Bool.false" class="InductiveConstructor"
       >false</a
-      ><a name="797"
-      > </a
-      ><a name="798" class="Symbol"
+      > <a name="798" class="Symbol"
       >:</a
-      ><a name="799"
-      > </a
-      ><a name="800" href="Links.html#Bool" class="Datatype"
+      > <a name="800" href="Links.html#Bool" class="Datatype"
       >Bool</a
-      ><a name="804"
       >
-\end{code}</a
-      ><a name="815" class="Comment"
+\end{code}<a name="815" class="Comment"
       >
 
 The AgdaTarget command takes a list as input, enabling several targets
@@ -191,133 +125,73 @@ to be specified as follows:
 
 \AgdaTarget{if, then, else, if\_then\_else\_}
 </a
-      ><a name="963"
       >\begin{code}
-</a
-      ><a name="if_then_else_" href="Links.html#if_then_else_" class="Function Operator"
+<a name="if_then_else_" href="Links.html#if_then_else_" class="Function Operator"
       >if_then_else_</a
-      ><a name="989"
-      > </a
-      ><a name="990" class="Symbol"
+      > <a name="990" class="Symbol"
       >:</a
-      ><a name="991"
-      > </a
-      ><a name="992" class="Symbol"
+      > <a name="992" class="Symbol"
       >{</a
       ><a name="993" href="Links.html#993" class="Bound"
       >A</a
-      ><a name="994"
-      > </a
-      ><a name="995" class="Symbol"
+      > <a name="995" class="Symbol"
       >:</a
-      ><a name="996"
-      > </a
-      ><a name="997" class="PrimitiveType"
+      > <a name="997" class="PrimitiveType"
       >Set</a
       ><a name="1000" class="Symbol"
       >}</a
-      ><a name="1001"
-      > </a
-      ><a name="1002" class="Symbol"
+      > <a name="1002" class="Symbol"
       >&#8594;</a
-      ><a name="1003"
-      > </a
-      ><a name="1004" href="Links.html#Bool" class="Datatype"
+      > <a name="1004" href="Links.html#Bool" class="Datatype"
       >Bool</a
-      ><a name="1008"
-      > </a
-      ><a name="1009" class="Symbol"
+      > <a name="1009" class="Symbol"
       >&#8594;</a
-      ><a name="1010"
-      > </a
-      ><a name="1011" href="Links.html#993" class="Bound"
+      > <a name="1011" href="Links.html#993" class="Bound"
       >A</a
-      ><a name="1012"
-      > </a
-      ><a name="1013" class="Symbol"
+      > <a name="1013" class="Symbol"
       >&#8594;</a
-      ><a name="1014"
-      > </a
-      ><a name="1015" href="Links.html#993" class="Bound"
+      > <a name="1015" href="Links.html#993" class="Bound"
       >A</a
-      ><a name="1016"
-      > </a
-      ><a name="1017" class="Symbol"
+      > <a name="1017" class="Symbol"
       >&#8594;</a
-      ><a name="1018"
-      > </a
-      ><a name="1019" href="Links.html#993" class="Bound"
+      > <a name="1019" href="Links.html#993" class="Bound"
       >A</a
-      ><a name="1020"
       >
-</a
-      ><a name="1021" href="Links.html#if_then_else_" class="Function Operator"
+<a name="1021" href="Links.html#if_then_else_" class="Function Operator"
       >if</a
-      ><a name="1023"
-      > </a
-      ><a name="1024" href="Links.html#Bool.true" class="InductiveConstructor"
+      > <a name="1024" href="Links.html#Bool.true" class="InductiveConstructor"
       >true</a
-      ><a name="1028"
-      > </a
-      ><a name="1029" href="Links.html#if_then_else_" class="Function Operator"
+      > <a name="1029" href="Links.html#if_then_else_" class="Function Operator"
       >then</a
-      ><a name="1033"
-      > </a
-      ><a name="1034" href="Links.html#1034" class="Bound"
+      > <a name="1034" href="Links.html#1034" class="Bound"
       >t</a
-      ><a name="1035"
-      > </a
-      ><a name="1036" href="Links.html#if_then_else_" class="Function Operator"
+      > <a name="1036" href="Links.html#if_then_else_" class="Function Operator"
       >else</a
-      ><a name="1040"
-      > </a
-      ><a name="1041" href="Links.html#1041" class="Bound"
+      > <a name="1041" href="Links.html#1041" class="Bound"
       >f</a
-      ><a name="1042"
-      > </a
-      ><a name="1043" class="Symbol"
+      > <a name="1043" class="Symbol"
       >=</a
-      ><a name="1044"
-      > </a
-      ><a name="1045" href="Links.html#1034" class="Bound"
+      > <a name="1045" href="Links.html#1034" class="Bound"
       >t</a
-      ><a name="1046"
       >
-</a
-      ><a name="1047" href="Links.html#if_then_else_" class="Function Operator"
+<a name="1047" href="Links.html#if_then_else_" class="Function Operator"
       >if</a
-      ><a name="1049"
-      > </a
-      ><a name="1050" href="Links.html#Bool.false" class="InductiveConstructor"
+      > <a name="1050" href="Links.html#Bool.false" class="InductiveConstructor"
       >false</a
-      ><a name="1055"
-      > </a
-      ><a name="1056" href="Links.html#if_then_else_" class="Function Operator"
+      > <a name="1056" href="Links.html#if_then_else_" class="Function Operator"
       >then</a
-      ><a name="1060"
-      > </a
-      ><a name="1061" href="Links.html#1061" class="Bound"
+      > <a name="1061" href="Links.html#1061" class="Bound"
       >t</a
-      ><a name="1062"
-      > </a
-      ><a name="1063" href="Links.html#if_then_else_" class="Function Operator"
+      > <a name="1063" href="Links.html#if_then_else_" class="Function Operator"
       >else</a
-      ><a name="1067"
-      > </a
-      ><a name="1068" href="Links.html#1068" class="Bound"
+      > <a name="1068" href="Links.html#1068" class="Bound"
       >f</a
-      ><a name="1069"
-      > </a
-      ><a name="1070" class="Symbol"
+      > <a name="1070" class="Symbol"
       >=</a
-      ><a name="1071"
-      > </a
-      ><a name="1072" href="Links.html#1068" class="Bound"
+      > <a name="1072" href="Links.html#1068" class="Bound"
       >f</a
-      ><a name="1073"
       >
-\end{code}</a
-      ><a name="1084" class="Comment"
+\end{code}<a name="1084" class="Comment"
       >
 
 \newpage
