--- a/test/LaTeXAndHTML/succeed/NoNewLinesVsNewLines.html
+++ b/test/LaTeXAndHTML/succeed/NoNewLinesVsNewLines.html
@@ -17,45 +17,29 @@
 \begin{document}
 
 </a
-      ><a name="63"
       >\begin{code}
-</a
-      ><a name="76" class="Keyword"
+<a name="76" class="Keyword"
       >module</a
-      ><a name="82"
-      > </a
-      ><a name="83" href="NoNewLinesVsNewLines.html#NoNewLinesVsNewLines" class="Module"
+      > <a name="83" href="NoNewLinesVsNewLines.html#NoNewLinesVsNewLines" class="Module"
       >NoNewLinesVsNewLines</a
-      ><a name="103"
-      > </a
-      ><a name="104" class="Keyword"
+      > <a name="104" class="Keyword"
       >where</a
-      ><a name="109"
       >
-\end{code}</a
-      ><a name="120" class="Comment"
+\end{code}<a name="120" class="Comment"
       >
 
 </a
-      ><a name="122"
       >\begin{code}
 
-</a
-      ><a name="136" class="Keyword"
+<a name="136" class="Keyword"
       >module</a
-      ><a name="142"
-      > </a
-      ><a name="Test2" href="NoNewLinesVsNewLines.html#Test2" class="Module"
+      > <a name="Test2" href="NoNewLinesVsNewLines.html#Test2" class="Module"
       >Test2</a
-      ><a name="148"
-      > </a
-      ><a name="149" class="Keyword"
+      > <a name="149" class="Keyword"
       >where</a
-      ><a name="154"
       >
 
-\end{code}</a
-      ><a name="166" class="Comment"
+\end{code}<a name="166" class="Comment"
       >
 
 \end{document}
