--- a/test/LaTeXAndHTML/succeed/Relative-indentation.html
+++ b/test/LaTeXAndHTML/succeed/Relative-indentation.html
@@ -17,207 +17,123 @@
 \begin{document}
 
 </a
-      ><a name="63"
       >\begin{code}
-</a
-      ><a name="76" class="Keyword"
+<a name="76" class="Keyword"
       >postulate</a
-      ><a name="85"
       >
-  </a
-      ><a name="A" href="Relative-indentation.html#A" class="Postulate"
+  <a name="A" href="Relative-indentation.html#A" class="Postulate"
       >A</a
-      ><a name="89"
-      >  </a
-      ><a name="B" href="Relative-indentation.html#B" class="Postulate"
+      >  <a name="B" href="Relative-indentation.html#B" class="Postulate"
       >B</a
-      ><a name="92"
       >
-      </a
-      ><a name="C" href="Relative-indentation.html#C" class="Postulate"
+      <a name="C" href="Relative-indentation.html#C" class="Postulate"
       >C</a
-      ><a name="100"
-      > </a
-      ><a name="101" class="Symbol"
+      > <a name="101" class="Symbol"
       >:</a
-      ><a name="102"
-      > </a
-      ><a name="103" class="PrimitiveType"
+      > <a name="103" class="PrimitiveType"
       >Set</a
-      ><a name="106"
       >
-\end{code}</a
-      ><a name="117" class="Comment"
+\end{code}<a name="117" class="Comment"
       >
 
 </a
-      ><a name="119"
       >\begin{code}
-</a
-      ><a name="132" class="Keyword"
+<a name="132" class="Keyword"
       >postulate</a
-      ><a name="141"
       >
-  </a
-      ><a name="D" href="Relative-indentation.html#D" class="Postulate"
+  <a name="D" href="Relative-indentation.html#D" class="Postulate"
       >D</a
-      ><a name="145"
-      >  </a
-      ><a name="E" href="Relative-indentation.html#E" class="Postulate"
+      >  <a name="E" href="Relative-indentation.html#E" class="Postulate"
       >E</a
-      ><a name="148"
       >
 
-      </a
-      ><a name="F" href="Relative-indentation.html#F" class="Postulate"
+      <a name="F" href="Relative-indentation.html#F" class="Postulate"
       >F</a
-      ><a name="157"
-      > </a
-      ><a name="158" class="Symbol"
+      > <a name="158" class="Symbol"
       >:</a
-      ><a name="159"
-      > </a
-      ><a name="160" class="PrimitiveType"
+      > <a name="160" class="PrimitiveType"
       >Set</a
-      ><a name="163"
       >
-\end{code}</a
-      ><a name="174" class="Comment"
+\end{code}<a name="174" class="Comment"
       >
 
 </a
-      ><a name="176"
       >\begin{code}
-</a
-      ><a name="189" class="Keyword"
+<a name="189" class="Keyword"
       >postulate</a
-      ><a name="198"
       >
-  </a
-      ><a name="G" href="Relative-indentation.html#G" class="Postulate"
+  <a name="G" href="Relative-indentation.html#G" class="Postulate"
       >G</a
-      ><a name="202"
-      >  </a
-      ><a name="H" href="Relative-indentation.html#H" class="Postulate"
+      >  <a name="H" href="Relative-indentation.html#H" class="Postulate"
       >H</a
-      ><a name="205"
-      >  </a
-      ><a name="207" class="Symbol"
+      >  <a name="207" class="Symbol"
       >:</a
-      ><a name="208"
-      > </a
-      ><a name="209" class="PrimitiveType"
+      > <a name="209" class="PrimitiveType"
       >Set</a
-      ><a name="212"
       >
-  </a
-      ><a name="I" href="Relative-indentation.html#I" class="Postulate"
+  <a name="I" href="Relative-indentation.html#I" class="Postulate"
       >I</a
-      ><a name="216"
       >
-      </a
-      ><a name="J" href="Relative-indentation.html#J" class="Postulate"
+      <a name="J" href="Relative-indentation.html#J" class="Postulate"
       >J</a
-      ><a name="224"
-      > </a
-      ><a name="225" class="Symbol"
+      > <a name="225" class="Symbol"
       >:</a
-      ><a name="226"
-      > </a
-      ><a name="227" class="PrimitiveType"
+      > <a name="227" class="PrimitiveType"
       >Set</a
-      ><a name="230"
       >
-\end{code}</a
-      ><a name="241" class="Comment"
+\end{code}<a name="241" class="Comment"
       >
 
 \begin{AgdaMultiCode}{2}
 </a
-      ><a name="268"
       >\begin{code}
-</a
-      ><a name="281" class="Keyword"
+<a name="281" class="Keyword"
       >postulate</a
-      ><a name="290"
       >
-  </a
-      ><a name="K" href="Relative-indentation.html#K" class="Postulate"
+  <a name="K" href="Relative-indentation.html#K" class="Postulate"
       >K</a
-      ><a name="294"
-      >  </a
-      ><a name="L" href="Relative-indentation.html#L" class="Postulate"
+      >  <a name="L" href="Relative-indentation.html#L" class="Postulate"
       >L</a
-      ><a name="297"
       >
-\end{code}</a
-      ><a name="308" class="Comment"
+\end{code}<a name="308" class="Comment"
       >
 </a
-      ><a name="309"
       >\begin{code}
-      </a
-      ><a name="M" href="Relative-indentation.html#M" class="Postulate"
+      <a name="M" href="Relative-indentation.html#M" class="Postulate"
       >M</a
-      ><a name="329"
-      > </a
-      ><a name="330" class="Symbol"
+      > <a name="330" class="Symbol"
       >:</a
-      ><a name="331"
-      > </a
-      ><a name="332" class="PrimitiveType"
+      > <a name="332" class="PrimitiveType"
       >Set</a
-      ><a name="335"
       >
-\end{code}</a
-      ><a name="346" class="Comment"
+\end{code}<a name="346" class="Comment"
       >
 \end{AgdaMultiCode}
 
 </a
-      ><a name="368"
       >\begin{code}
-</a
-      ><a name="381" class="Keyword"
+<a name="381" class="Keyword"
       >record</a
-      ><a name="387"
-      > </a
-      ><a name="R" href="Relative-indentation.html#R" class="Record"
+      > <a name="R" href="Relative-indentation.html#R" class="Record"
       >R</a
-      ><a name="389"
-      > </a
-      ><a name="390" class="Symbol"
+      > <a name="390" class="Symbol"
       >:</a
-      ><a name="391"
-      > </a
-      ><a name="392" class="PrimitiveType"
+      > <a name="392" class="PrimitiveType"
       >Set&#8321;</a
-      ><a name="396"
-      > </a
-      ><a name="397" class="Keyword"
+      > <a name="397" class="Keyword"
       >where</a
-      ><a name="402"
       >
-  </a
-      ><a name="405" class="Keyword"
+  <a name="405" class="Keyword"
       >field</a
-      ><a name="410"
-      > </a
-      ><a name="R.N" href="Relative-indentation.html#R.N" class="Field"
+      > <a name="R.N" href="Relative-indentation.html#R.N" class="Field"
       >N</a
-      ><a name="412"
-      > </a
-      ><a name="413" class="Symbol"
+      > <a name="413" class="Symbol"
       >:</a
-      ><a name="414"
       >
-            </a
-      ><a name="427" class="PrimitiveType"
+            <a name="427" class="PrimitiveType"
       >Set</a
-      ><a name="430"
       >
-\end{code}</a
-      ><a name="441" class="Comment"
+\end{code}<a name="441" class="Comment"
       >
 
 % There is (and should be) trailing whitespace at the end of some
@@ -225,395 +141,231 @@
 
 \begin{AgdaAlign}
 text </a
-      ><a name="548"
       >\begin{code}        
-</a
-      ><a name="569" class="Keyword"
+<a name="569" class="Keyword"
       >module</a
-      ><a name="575"
-      > </a
-      ><a name="576" href="Relative-indentation.html#576" class="Module"
+      > <a name="576" href="Relative-indentation.html#576" class="Module"
       >_</a
-      ><a name="577"
-      > </a
-      ><a name="578" class="Keyword"
+      > <a name="578" class="Keyword"
       >where</a
-      ><a name="583"
       >
-\end{code}</a
-      ><a name="594" class="Comment"
+\end{code}<a name="594" class="Comment"
       > more text
     also text  </a
-      ><a name="620"
       >\begin{code}
-    </a
-      ><a name="637" class="Keyword"
+    <a name="637" class="Keyword"
       >postulate</a
-      ><a name="646"
-      > </a
-      ><a name="647" href="Relative-indentation.html#647" class="Postulate"
+      > <a name="647" href="Relative-indentation.html#647" class="Postulate"
       >O</a
-      ><a name="648"
-      > </a
-      ><a name="649" class="Symbol"
+      > <a name="649" class="Symbol"
       >:</a
-      ><a name="650"
-      > </a
-      ><a name="651" class="PrimitiveType"
+      > <a name="651" class="PrimitiveType"
       >Set</a
-      ><a name="654"
       >  
-  \end{code}</a
-      ><a name="669" class="Comment"
+  \end{code}<a name="669" class="Comment"
       > text again
 
  text          </a
-      ><a name="697"
       >\begin{code}            
-    </a
-      ><a name="726" class="Keyword"
+    <a name="726" class="Keyword"
       >postulate</a
-      ><a name="735"
-      > </a
-      ><a name="736" href="Relative-indentation.html#736" class="Postulate"
+      > <a name="736" href="Relative-indentation.html#736" class="Postulate"
       >o</a
-      ><a name="737"
-      > </a
-      ><a name="738" class="Symbol"
+      > <a name="738" class="Symbol"
       >:</a
-      ><a name="739"
-      > </a
-      ><a name="740" href="Relative-indentation.html#647" class="Postulate"
+      > <a name="740" href="Relative-indentation.html#647" class="Postulate"
       >O</a
-      ><a name="741"
       >    
-  \end{code}</a
-      ><a name="758" class="Comment"
+  \end{code}<a name="758" class="Comment"
       >   text             
 \end{AgdaAlign}
 
 </a
-      ><a name="796"
       >\begin{code}
-</a
-      ><a name="809" class="Keyword"
+<a name="809" class="Keyword"
       >postulate</a
-      ><a name="818"
       >
- </a
-      ><a name="P" href="Relative-indentation.html#P" class="Postulate"
+ <a name="P" href="Relative-indentation.html#P" class="Postulate"
       >P</a
-      ><a name="821"
-      > </a
-      ><a name="822" class="Symbol"
+      > <a name="822" class="Symbol"
       >:</a
-      ><a name="823"
-      > </a
-      ><a name="824" class="PrimitiveType"
+      > <a name="824" class="PrimitiveType"
       >Set</a
-      ><a name="827"
       >
-\end{code}</a
-      ><a name="838" class="Comment"
+\end{code}<a name="838" class="Comment"
       >
 
 </a
-      ><a name="840"
       >\begin{code}
-</a
-      ><a name="853" class="Keyword"
+<a name="853" class="Keyword"
       >module</a
-      ><a name="859"
-      > </a
-      ><a name="860" href="Relative-indentation.html#860" class="Module"
+      > <a name="860" href="Relative-indentation.html#860" class="Module"
       >_</a
-      ><a name="861"
-      > </a
-      ><a name="862" class="Keyword"
+      > <a name="862" class="Keyword"
       >where</a
-      ><a name="867"
       >
- </a
-      ><a name="869" class="Keyword"
+ <a name="869" class="Keyword"
       >postulate</a
-      ><a name="878"
       >
-  </a
-      ><a name="881" href="Relative-indentation.html#881" class="Postulate"
+  <a name="881" href="Relative-indentation.html#881" class="Postulate"
       >Q</a
-      ><a name="882"
-      > </a
-      ><a name="883" class="Symbol"
+      > <a name="883" class="Symbol"
       >:</a
-      ><a name="884"
-      > </a
-      ><a name="885" class="PrimitiveType"
+      > <a name="885" class="PrimitiveType"
       >Set</a
-      ><a name="888"
       >
-\end{code}</a
-      ><a name="899" class="Comment"
+\end{code}<a name="899" class="Comment"
       >
 
 </a
-      ><a name="901"
       >\begin{code}
-</a
-      ><a name="914" class="Keyword"
+<a name="914" class="Keyword"
       >module</a
-      ><a name="920"
-      > </a
-      ><a name="921" href="Relative-indentation.html#921" class="Module"
+      > <a name="921" href="Relative-indentation.html#921" class="Module"
       >_</a
-      ><a name="922"
-      > </a
-      ><a name="923" class="Keyword"
+      > <a name="923" class="Keyword"
       >where</a
-      ><a name="928"
       >
-         </a
-      ><a name="938" class="Keyword"
+         <a name="938" class="Keyword"
       >postulate</a
-      ><a name="947"
       >
-          </a
-      ><a name="958" href="Relative-indentation.html#958" class="Postulate"
+          <a name="958" href="Relative-indentation.html#958" class="Postulate"
       >S</a
-      ><a name="959"
-      > </a
-      ><a name="960" class="Symbol"
+      > <a name="960" class="Symbol"
       >:</a
-      ><a name="961"
-      > </a
-      ><a name="962" class="PrimitiveType"
+      > <a name="962" class="PrimitiveType"
       >Set</a
-      ><a name="965"
       >
-\end{code}</a
-      ><a name="976" class="Comment"
+\end{code}<a name="976" class="Comment"
       >
 
 \begin{AgdaMultiCode}{2}
 </a
-      ><a name="1003"
       >\begin{code}
-</a
-      ><a name="1016" class="Keyword"
+<a name="1016" class="Keyword"
       >module</a
-      ><a name="1022"
-      > </a
-      ><a name="1023" href="Relative-indentation.html#1023" class="Module"
+      > <a name="1023" href="Relative-indentation.html#1023" class="Module"
       >_</a
-      ><a name="1024"
-      > </a
-      ><a name="1025" class="Keyword"
+      > <a name="1025" class="Keyword"
       >where</a
-      ><a name="1030"
       >
-\end{code}</a
-      ><a name="1041" class="Comment"
+\end{code}<a name="1041" class="Comment"
       >
 </a
-      ><a name="1042"
       >\begin{code}
-  </a
-      ><a name="1057" class="Keyword"
+  <a name="1057" class="Keyword"
       >postulate</a
-      ><a name="1066"
-      > </a
-      ><a name="1067" href="Relative-indentation.html#1067" class="Postulate"
+      > <a name="1067" href="Relative-indentation.html#1067" class="Postulate"
       >T</a
-      ><a name="1068"
-      > </a
-      ><a name="1069" class="Symbol"
+      > <a name="1069" class="Symbol"
       >:</a
-      ><a name="1070"
-      > </a
-      ><a name="1071" class="PrimitiveType"
+      > <a name="1071" class="PrimitiveType"
       >Set</a
-      ><a name="1074"
       >
-            </a
-      ><a name="1087" href="Relative-indentation.html#1087" class="Postulate"
+            <a name="1087" href="Relative-indentation.html#1087" class="Postulate"
       >U</a
-      ><a name="1088"
-      > </a
-      ><a name="1089" class="Symbol"
+      > <a name="1089" class="Symbol"
       >:</a
-      ><a name="1090"
-      > </a
-      ><a name="1091" class="PrimitiveType"
+      > <a name="1091" class="PrimitiveType"
       >Set</a
-      ><a name="1094"
       >
-\end{code}</a
-      ><a name="1105" class="Comment"
+\end{code}<a name="1105" class="Comment"
       >
 \end{AgdaMultiCode}
 
 \begin{AgdaSuppressSpace}{2}
 </a
-      ><a name="1156"
       >\begin{code}
-</a
-      ><a name="1169" class="Keyword"
+<a name="1169" class="Keyword"
       >module</a
-      ><a name="1175"
-      > </a
-      ><a name="1176" href="Relative-indentation.html#1176" class="Module"
+      > <a name="1176" href="Relative-indentation.html#1176" class="Module"
       >_</a
-      ><a name="1177"
-      > </a
-      ><a name="1178" class="Keyword"
+      > <a name="1178" class="Keyword"
       >where</a
-      ><a name="1183"
       >
-\end{code}</a
-      ><a name="1194" class="Comment"
+\end{code}<a name="1194" class="Comment"
       >
 </a
-      ><a name="1195"
       >\begin{code}
-  </a
-      ><a name="1210" class="Keyword"
+  <a name="1210" class="Keyword"
       >postulate</a
-      ><a name="1219"
-      > </a
-      ><a name="1220" href="Relative-indentation.html#1220" class="Postulate"
+      > <a name="1220" href="Relative-indentation.html#1220" class="Postulate"
       >V</a
-      ><a name="1221"
-      > </a
-      ><a name="1222" class="Symbol"
+      > <a name="1222" class="Symbol"
       >:</a
-      ><a name="1223"
-      > </a
-      ><a name="1224" class="PrimitiveType"
+      > <a name="1224" class="PrimitiveType"
       >Set</a
-      ><a name="1227"
       >
-            </a
-      ><a name="1240" href="Relative-indentation.html#1240" class="Postulate"
+            <a name="1240" href="Relative-indentation.html#1240" class="Postulate"
       >W</a
-      ><a name="1241"
-      > </a
-      ><a name="1242" class="Symbol"
+      > <a name="1242" class="Symbol"
       >:</a
-      ><a name="1243"
-      > </a
-      ><a name="1244" class="PrimitiveType"
+      > <a name="1244" class="PrimitiveType"
       >Set</a
-      ><a name="1247"
       >
-\end{code}</a
-      ><a name="1258" class="Comment"
+\end{code}<a name="1258" class="Comment"
       >
 \end{AgdaSuppressSpace}
 
 </a
-      ><a name="1284"
       >\begin{code}
-</a
-      ><a name="X" href="Relative-indentation.html#X" class="Function"
+<a name="X" href="Relative-indentation.html#X" class="Function"
       >X</a
-      ><a name="1298"
-      > </a
-      ><a name="1299" class="Symbol"
+      > <a name="1299" class="Symbol"
       >:</a
-      ><a name="1300"
-      > </a
-      ><a name="1301" class="PrimitiveType"
+      > <a name="1301" class="PrimitiveType"
       >Set&#8321;</a
-      ><a name="1305"
       >
-</a
-      ><a name="1306" href="Relative-indentation.html#X" class="Function"
+<a name="1306" href="Relative-indentation.html#X" class="Function"
       >X</a
-      ><a name="1307"
-      > </a
-      ><a name="1308" class="Symbol"
+      > <a name="1308" class="Symbol"
       >=</a
-      ><a name="1309"
       >
-  </a
-      ><a name="1312" class="PrimitiveType"
+  <a name="1312" class="PrimitiveType"
       >Set</a
-      ><a name="1315"
       >
-\end{code}</a
-      ><a name="1326" class="Comment"
+\end{code}<a name="1326" class="Comment"
       >
 
 </a
-      ><a name="1328"
       >\begin{code}
-</a
-      ><a name="Y" href="Relative-indentation.html#Y" class="Function"
+<a name="Y" href="Relative-indentation.html#Y" class="Function"
       >Y</a
-      ><a name="1342"
-      > </a
-      ><a name="1343" class="Symbol"
+      > <a name="1343" class="Symbol"
       >:</a
-      ><a name="1344"
-      > </a
-      ><a name="1345" class="PrimitiveType"
+      > <a name="1345" class="PrimitiveType"
       >Set&#8321;</a
-      ><a name="1349"
       >
-</a
-      ><a name="1350" href="Relative-indentation.html#Y" class="Function"
+<a name="1350" href="Relative-indentation.html#Y" class="Function"
       >Y</a
-      ><a name="1351"
-      > </a
-      ><a name="1352" class="Symbol"
+      > <a name="1352" class="Symbol"
       >=</a
-      ><a name="1353"
-      >       </a
-      ><a name="1360" class="PrimitiveType"
+      >       <a name="1360" class="PrimitiveType"
       >Set</a
-      ><a name="1363"
       >
 
-</a
-      ><a name="Zzzzzzzzz" href="Relative-indentation.html#Zzzzzzzzz" class="Function"
+<a name="Zzzzzzzzz" href="Relative-indentation.html#Zzzzzzzzz" class="Function"
       >Zzzzzzzzz</a
-      ><a name="1374"
-      > </a
-      ><a name="1375" class="Symbol"
+      > <a name="1375" class="Symbol"
       >:</a
-      ><a name="1376"
-      > </a
-      ><a name="1377" class="PrimitiveType"
+      > <a name="1377" class="PrimitiveType"
       >Set</a
-      ><a name="1380"
-      > </a
-      ><a name="1381" class="Symbol"
+      > <a name="1381" class="Symbol"
       >&#8594;</a
-      ><a name="1382"
-      > </a
-      ><a name="1383" class="PrimitiveType"
+      > <a name="1383" class="PrimitiveType"
       >Set</a
-      ><a name="1386"
       >
-</a
-      ><a name="1387" href="Relative-indentation.html#Zzzzzzzzz" class="Function"
+<a name="1387" href="Relative-indentation.html#Zzzzzzzzz" class="Function"
       >Zzzzzzzzz</a
-      ><a name="1396"
-      > </a
-      ><a name="1397" href="Relative-indentation.html#1397" class="Bound"
+      > <a name="1397" href="Relative-indentation.html#1397" class="Bound"
       >X</a
-      ><a name="1398"
       >
-          </a
-      ><a name="1409" class="Symbol"
+          <a name="1409" class="Symbol"
       >=</a
-      ><a name="1410"
-      > </a
-      ><a name="1411" href="Relative-indentation.html#1397" class="Bound"
+      > <a name="1411" href="Relative-indentation.html#1397" class="Bound"
       >X</a
-      ><a name="1412"
       >
-\end{code}</a
-      ><a name="1423" class="Comment"
+\end{code}<a name="1423" class="Comment"
       >
 
 \end{document}
