--- a/test/LaTeXAndHTML/succeed/RsTQuotedDelim.html
+++ b/test/LaTeXAndHTML/succeed/RsTQuotedDelim.html
@@ -12,102 +12,58 @@
     ><a name="1" class="Comment"
       >av
 </a
-      ><a name="4"
       >::
-  </a
-      ><a name="9" class="Keyword"
+  <a name="9" class="Keyword"
       >module</a
-      ><a name="15"
-      > </a
-      ><a name="16" href="RsTQuotedDelim.html#RsTQuotedDelim" class="Module"
+      > <a name="16" href="RsTQuotedDelim.html#RsTQuotedDelim" class="Module"
       >RsTQuotedDelim</a
-      ><a name="30"
-      > </a
-      ><a name="31" class="Keyword"
+      > <a name="31" class="Keyword"
       >where</a
-      ><a name="36"
       >
 
-       </a
-      ><a name="45" class="Keyword"
+       <a name="45" class="Keyword"
       >data</a
-      ><a name="49"
-      > </a
-      ><a name="Bool" href="RsTQuotedDelim.html#Bool" class="Datatype"
+      > <a name="Bool" href="RsTQuotedDelim.html#Bool" class="Datatype"
       >Bool</a
-      ><a name="54"
-      > </a
-      ><a name="55" class="Symbol"
+      > <a name="55" class="Symbol"
       >:</a
-      ><a name="56"
-      > </a
-      ><a name="57" class="PrimitiveType"
+      > <a name="57" class="PrimitiveType"
       >Set</a
-      ><a name="60"
-      > </a
-      ><a name="61" class="Keyword"
+      > <a name="61" class="Keyword"
       >where</a
-      ><a name="66"
       >
-        </a
-      ><a name="Bool.true" href="RsTQuotedDelim.html#Bool.true" class="InductiveConstructor"
+        <a name="Bool.true" href="RsTQuotedDelim.html#Bool.true" class="InductiveConstructor"
       >true</a
-      ><a name="79"
-      > </a
-      ><a name="80" class="Symbol"
+      > <a name="80" class="Symbol"
       >:</a
-      ><a name="81"
-      > </a
-      ><a name="82" href="RsTQuotedDelim.html#Bool" class="Datatype"
+      > <a name="82" href="RsTQuotedDelim.html#Bool" class="Datatype"
       >Bool</a
-      ><a name="86"
       >
-        </a
-      ><a name="Bool.false" href="RsTQuotedDelim.html#Bool.false" class="InductiveConstructor"
+        <a name="Bool.false" href="RsTQuotedDelim.html#Bool.false" class="InductiveConstructor"
       >false</a
-      ><a name="100"
-      > </a
-      ><a name="101" class="Symbol"
+      > <a name="101" class="Symbol"
       >:</a
-      ><a name="102"
-      > </a
-      ><a name="103" href="RsTQuotedDelim.html#Bool" class="Datatype"
+      > <a name="103" href="RsTQuotedDelim.html#Bool" class="Datatype"
       >Bool</a
-      ><a name="107"
       >
-        </a
-      ><a name="Bool.dunno" href="RsTQuotedDelim.html#Bool.dunno" class="InductiveConstructor"
+        <a name="Bool.dunno" href="RsTQuotedDelim.html#Bool.dunno" class="InductiveConstructor"
       >dunno</a
-      ><a name="121"
-      > </a
-      ><a name="122" class="Symbol"
+      > <a name="122" class="Symbol"
       >:</a
-      ><a name="123"
-      > </a
-      ><a name="124" href="RsTQuotedDelim.html#Bool" class="Datatype"
+      > <a name="124" href="RsTQuotedDelim.html#Bool" class="Datatype"
       >Bool</a
-      ><a name="128"
       >
-        </a
-      ><a name="Bool.aa" href="RsTQuotedDelim.html#Bool.aa" class="InductiveConstructor"
+        <a name="Bool.aa" href="RsTQuotedDelim.html#Bool.aa" class="InductiveConstructor"
       >aa</a
-      ><a name="139"
-      > </a
-      ><a name="140" class="Symbol"
+      > <a name="140" class="Symbol"
       >:</a
-      ><a name="141"
-      > </a
-      ><a name="142" class="Comment"
+      > <a name="142" class="Comment"
       >{- :: -}</a
-      ><a name="150"
-      > </a
-      ><a name="151" href="RsTQuotedDelim.html#Bool" class="Datatype"
+      > <a name="151" href="RsTQuotedDelim.html#Bool" class="Datatype"
       >Bool</a
-      ><a name="155"
       >
 
-</a
-      ><a name="157" class="Comment"
+<a name="157" class="Comment"
       >blip :: blop
 
        a : Bool
