--- a/test/LaTeXAndHTML/succeed/Tag.html
+++ b/test/LaTeXAndHTML/succeed/Tag.html
@@ -17,202 +17,114 @@
 \begin{document}
 
 </a
-      ><a name="75"
       >\begin{code}
-</a
-      ><a name="88" class="Keyword"
+<a name="88" class="Keyword"
       >module</a
-      ><a name="94"
-      > </a
-      ><a name="95" href="Tag.html#Tag" class="Module"
+      > <a name="95" href="Tag.html#Tag" class="Module"
       >Tag</a
-      ><a name="98"
-      > </a
-      ><a name="99" class="Keyword"
+      > <a name="99" class="Keyword"
       >where</a
-      ><a name="104"
       >
 
-</a
-      ><a name="106" class="Keyword"
+<a name="106" class="Keyword"
       >module</a
-      ><a name="112"
-      > </a
-      ><a name="Apa" href="Tag.html#Apa" class="Module"
+      > <a name="Apa" href="Tag.html#Apa" class="Module"
       >Apa</a
-      ><a name="116"
-      > </a
-      ><a name="117" class="Keyword"
+      > <a name="117" class="Keyword"
       >where</a
-      ><a name="122"
       >
 
-</a
-      ><a name="bepa" href="Tag.html#bepa" class="Function"
+<a name="bepa" href="Tag.html#bepa" class="Function"
       >bepa</a
-      ><a name="128"
-      > </a
-      ><a name="129" class="Symbol"
+      > <a name="129" class="Symbol"
       >:</a
-      ><a name="130"
-      > </a
-      ><a name="131" class="PrimitiveType"
+      > <a name="131" class="PrimitiveType"
       >Set</a
-      ><a name="134"
-      > </a
-      ><a name="135" class="Symbol"
+      > <a name="135" class="Symbol"
       >&#8594;</a
-      ><a name="136"
-      > </a
-      ><a name="137" class="PrimitiveType"
+      > <a name="137" class="PrimitiveType"
       >Set</a
-      ><a name="140"
       >
-</a
-      ><a name="141" href="Tag.html#bepa" class="Function"
+<a name="141" href="Tag.html#bepa" class="Function"
       >bepa</a
-      ><a name="145"
-      > </a
-      ><a name="146" href="Tag.html#146" class="Bound"
+      > <a name="146" href="Tag.html#146" class="Bound"
       >x</a
-      ><a name="147"
-      > </a
-      ><a name="148" class="Symbol"
+      > <a name="148" class="Symbol"
       >=</a
-      ><a name="149"
-      > </a
-      ><a name="150" href="Tag.html#146" class="Bound"
+      > <a name="150" href="Tag.html#146" class="Bound"
       >x</a
-      ><a name="151"
       >
 
-</a
-      ><a name="153" class="Keyword"
+<a name="153" class="Keyword"
       >data</a
-      ><a name="157"
-      > </a
-      ><a name="Cepa" href="Tag.html#Cepa" class="Datatype"
+      > <a name="Cepa" href="Tag.html#Cepa" class="Datatype"
       >Cepa</a
-      ><a name="162"
-      > </a
-      ><a name="163" class="Symbol"
+      > <a name="163" class="Symbol"
       >:</a
-      ><a name="164"
-      > </a
-      ><a name="165" class="PrimitiveType"
+      > <a name="165" class="PrimitiveType"
       >Set</a
-      ><a name="168"
-      > </a
-      ><a name="169" class="Keyword"
+      > <a name="169" class="Keyword"
       >where</a
-      ><a name="174"
       >
-  </a
-      ><a name="Cepa.cepa" href="Tag.html#Cepa.cepa" class="InductiveConstructor"
+  <a name="Cepa.cepa" href="Tag.html#Cepa.cepa" class="InductiveConstructor"
       >cepa</a
-      ><a name="181"
-      > </a
-      ><a name="182" class="Symbol"
+      > <a name="182" class="Symbol"
       >:</a
-      ><a name="183"
-      > </a
-      ><a name="184" href="Tag.html#Cepa" class="Datatype"
+      > <a name="184" href="Tag.html#Cepa" class="Datatype"
       >Cepa</a
-      ><a name="188"
       >
 
-</a
-      ><a name="190" class="Keyword"
+<a name="190" class="Keyword"
       >record</a
-      ><a name="196"
-      > </a
-      ><a name="Depa" href="Tag.html#Depa" class="Record"
+      > <a name="Depa" href="Tag.html#Depa" class="Record"
       >Depa</a
-      ><a name="201"
-      > </a
-      ><a name="202" class="Symbol"
+      > <a name="202" class="Symbol"
       >:</a
-      ><a name="203"
-      > </a
-      ><a name="204" class="PrimitiveType"
+      > <a name="204" class="PrimitiveType"
       >Set&#8321;</a
-      ><a name="208"
-      > </a
-      ><a name="209" class="Keyword"
+      > <a name="209" class="Keyword"
       >where</a
-      ><a name="214"
       >
-  </a
-      ><a name="217" class="Keyword"
+  <a name="217" class="Keyword"
       >field</a
-      ><a name="222"
       >
-    </a
-      ><a name="Depa.depa" href="Tag.html#Depa.depa" class="Field"
+    <a name="Depa.depa" href="Tag.html#Depa.depa" class="Field"
       >depa</a
-      ><a name="231"
-      > </a
-      ><a name="232" class="Symbol"
+      > <a name="232" class="Symbol"
       >:</a
-      ><a name="233"
-      > </a
-      ><a name="234" class="PrimitiveType"
+      > <a name="234" class="PrimitiveType"
       >Set</a
-      ><a name="237"
       >
 
-</a
-      ><a name="239" class="Keyword"
+<a name="239" class="Keyword"
       >postulate</a
-      ><a name="248"
       >
-  </a
-      ><a name="epa" href="Tag.html#epa" class="Postulate"
+  <a name="epa" href="Tag.html#epa" class="Postulate"
       >epa</a
-      ><a name="254"
-      > </a
-      ><a name="255" class="Symbol"
+      > <a name="255" class="Symbol"
       >:</a
-      ><a name="256"
-      > </a
-      ><a name="257" class="PrimitiveType"
+      > <a name="257" class="PrimitiveType"
       >Set</a
-      ><a name="260"
       >
 
-</a
-      ><a name="262" class="Keyword"
+<a name="262" class="Keyword"
       >postulate</a
-      ><a name="271"
       >
-  </a
-      ><a name="&#945;" href="Tag.html#&#945;" class="Postulate"
+  <a name="&#945;" href="Tag.html#&#945;" class="Postulate"
       >&#945;</a
-      ><a name="275"
-      >   </a
-      ><a name="278" class="Symbol"
+      >   <a name="278" class="Symbol"
       >:</a
-      ><a name="279"
-      > </a
-      ><a name="280" class="PrimitiveType"
+      > <a name="280" class="PrimitiveType"
       >Set</a
-      ><a name="283"
       >
-  </a
-      ><a name="_&#8728;_" href="Tag.html#_&#8728;_" class="Postulate Operator"
+  <a name="_&#8728;_" href="Tag.html#_&#8728;_" class="Postulate Operator"
       >_&#8728;_</a
-      ><a name="289"
-      > </a
-      ><a name="290" class="Symbol"
+      > <a name="290" class="Symbol"
       >:</a
-      ><a name="291"
-      > </a
-      ><a name="292" class="PrimitiveType"
+      > <a name="292" class="PrimitiveType"
       >Set</a
-      ><a name="295"
       >
-\end{code}</a
-      ><a name="306" class="Comment"
+\end{code}<a name="306" class="Comment"
       >
 
 \begin{tabular}{ll}
