--- a/test/LaTeXAndHTML/succeed/UnicodeDeclare.html
+++ b/test/LaTeXAndHTML/succeed/UnicodeDeclare.html
@@ -24,28 +24,18 @@
 \begin{document}
 
 </a
-      ><a name="245"
       >\begin{code}
-</a
-      ><a name="258" class="Comment"
+<a name="258" class="Comment"
       >-- &#9711; = Set</a
-      ><a name="268"
       >
-</a
-      ><a name="&#9711;" href="UnicodeDeclare.html#&#9711;" class="Function"
+<a name="&#9711;" href="UnicodeDeclare.html#&#9711;" class="Function"
       >&#9711;</a
-      ><a name="270"
-      > </a
-      ><a name="271" class="Symbol"
+      > <a name="271" class="Symbol"
       >=</a
-      ><a name="272"
-      > </a
-      ><a name="273" class="PrimitiveType"
+      > <a name="273" class="PrimitiveType"
       >Set</a
-      ><a name="276"
       >
-\end{code}</a
-      ><a name="287" class="Comment"
+\end{code}<a name="287" class="Comment"
       >
 
 \end{document}
