--- a/test/LaTeXAndHTML/succeed/AccidentalSpacesBeforeEndCode.html
+++ b/test/LaTeXAndHTML/succeed/AccidentalSpacesBeforeEndCode.html
@@ -17,23 +17,15 @@
 \begin{document}
 
 </a
-      ><a name="63"
       >\begin{code}
-</a
-      ><a name="76" class="Keyword"
+<a name="76" class="Keyword"
       >module</a
-      ><a name="82"
-      > </a
-      ><a name="83" href="AccidentalSpacesBeforeEndCode.html#AccidentalSpacesBeforeEndCode" class="Module"
+      > <a name="83" href="AccidentalSpacesBeforeEndCode.html#AccidentalSpacesBeforeEndCode" class="Module"
       >AccidentalSpacesBeforeEndCode</a
-      ><a name="112"
-      > </a
-      ><a name="113" class="Keyword"
+      > <a name="113" class="Keyword"
       >where</a
-      ><a name="118"
       >
-  \end{code}</a
-      ><a name="131" class="Comment"
+  \end{code}<a name="131" class="Comment"
       >
 
 \end{document}
