--- a/test/LaTeXAndHTML/succeed/EscapedTeXComment.html
+++ b/test/LaTeXAndHTML/succeed/EscapedTeXComment.html
@@ -17,27 +17,17 @@
 \begin{document}
 
 100\% postulated: </a
-      ><a name="81"
       >\begin{code}
-</a
-      ><a name="94" class="Keyword"
+<a name="94" class="Keyword"
       >postulate</a
-      ><a name="103"
-      > </a
-      ><a name="A" href="EscapedTeXComment.html#A" class="Postulate"
+      > <a name="A" href="EscapedTeXComment.html#A" class="Postulate"
       >A</a
-      ><a name="105"
-      > </a
-      ><a name="106" class="Symbol"
+      > <a name="106" class="Symbol"
       >:</a
-      ><a name="107"
-      > </a
-      ><a name="108" class="PrimitiveType"
+      > <a name="108" class="PrimitiveType"
       >Set</a
-      ><a name="111"
       >
-\end{code}</a
-      ><a name="122" class="Comment"
+\end{code}<a name="122" class="Comment"
       >
 
 \end{document}
