--- a/test/LaTeXAndHTML/succeed/Grapheme-clusters.html
+++ b/test/LaTeXAndHTML/succeed/Grapheme-clusters.html
@@ -18,99 +18,57 @@
 
 \AgdaPostulate{A} and \AgdaPostulate{B} should be aligned:
 </a
-      ><a name="122"
       >\begin{code}
-  </a
-      ><a name="137" class="Keyword"
+  <a name="137" class="Keyword"
       >postulate</a
-      ><a name="146"
       >
-    </a
-      ><a name="+&#818;+&#818;+&#818;+&#818;+&#818;+&#818;" href="Grapheme-clusters.html#+&#818;+&#818;+&#818;+&#818;+&#818;+&#818;" class="Postulate"
+    <a name="+&#818;+&#818;+&#818;+&#818;+&#818;+&#818;" href="Grapheme-clusters.html#+&#818;+&#818;+&#818;+&#818;+&#818;+&#818;" class="Postulate"
       >+&#818;+&#818;+&#818;+&#818;+&#818;+&#818;</a
-      ><a name="163"
-      >  </a
-      ><a name="A" href="Grapheme-clusters.html#A" class="Postulate"
+      >  <a name="A" href="Grapheme-clusters.html#A" class="Postulate"
       >A</a
-      ><a name="166"
       >
-            </a
-      ><a name="B" href="Grapheme-clusters.html#B" class="Postulate"
+            <a name="B" href="Grapheme-clusters.html#B" class="Postulate"
       >B</a
-      ><a name="180"
-      > </a
-      ><a name="181" class="Symbol"
+      > <a name="181" class="Symbol"
       >:</a
-      ><a name="182"
-      > </a
-      ><a name="183" class="PrimitiveType"
+      > <a name="183" class="PrimitiveType"
       >Set</a
-      ><a name="186"
       >
-\end{code}</a
-      ><a name="197" class="Comment"
+\end{code}<a name="197" class="Comment"
       >
 
 The two \AgdaKeyword{field} keywords should not be aligned:
 </a
-      ><a name="259"
       >\begin{code}
-  </a
-      ><a name="274" class="Keyword"
+  <a name="274" class="Keyword"
       >record</a
-      ><a name="280"
-      > </a
-      ><a name="+&#818;" href="Grapheme-clusters.html#+&#818;" class="Record"
+      > <a name="+&#818;" href="Grapheme-clusters.html#+&#818;" class="Record"
       >+&#818;</a
-      ><a name="283"
-      > </a
-      ><a name="284" class="Symbol"
+      > <a name="284" class="Symbol"
       >:</a
-      ><a name="285"
-      > </a
-      ><a name="286" class="PrimitiveType"
+      > <a name="286" class="PrimitiveType"
       >Set&#8321;</a
-      ><a name="290"
-      > </a
-      ><a name="291" class="Keyword"
+      > <a name="291" class="Keyword"
       >where</a
-      ><a name="296"
-      >  </a
-      ><a name="298" class="Keyword"
+      >  <a name="298" class="Keyword"
       >field</a
-      ><a name="303"
-      > </a
-      ><a name="+&#818;.C" href="Grapheme-clusters.html#+&#818;.C" class="Field"
+      > <a name="+&#818;.C" href="Grapheme-clusters.html#+&#818;.C" class="Field"
       >C</a
-      ><a name="305"
-      > </a
-      ><a name="306" class="Symbol"
+      > <a name="306" class="Symbol"
       >:</a
-      ><a name="307"
-      > </a
-      ><a name="308" class="PrimitiveType"
+      > <a name="308" class="PrimitiveType"
       >Set</a
-      ><a name="311"
       >
-                          </a
-      ><a name="338" class="Keyword"
+                          <a name="338" class="Keyword"
       >field</a
-      ><a name="343"
-      > </a
-      ><a name="+&#818;.D" href="Grapheme-clusters.html#+&#818;.D" class="Field"
+      > <a name="+&#818;.D" href="Grapheme-clusters.html#+&#818;.D" class="Field"
       >D</a
-      ><a name="345"
-      > </a
-      ><a name="346" class="Symbol"
+      > <a name="346" class="Symbol"
       >:</a
-      ><a name="347"
-      > </a
-      ><a name="348" class="PrimitiveType"
+      > <a name="348" class="PrimitiveType"
       >Set</a
-      ><a name="351"
       >
-\end{code}</a
-      ><a name="362" class="Comment"
+\end{code}<a name="362" class="Comment"
       >
 
 \end{document}
