--- a/test/LaTeXAndHTML/succeed/Indenting.html
+++ b/test/LaTeXAndHTML/succeed/Indenting.html
@@ -17,65 +17,37 @@
 \begin{document}
 
 </a
-      ><a name="63"
       >\begin{code}
-</a
-      ><a name="76" class="Keyword"
+<a name="76" class="Keyword"
       >data</a
-      ><a name="80"
-      > </a
-      ><a name="Nat" href="Indenting.html#Nat" class="Datatype"
+      > <a name="Nat" href="Indenting.html#Nat" class="Datatype"
       >Nat</a
-      ><a name="84"
-      > </a
-      ><a name="85" class="Symbol"
+      > <a name="85" class="Symbol"
       >:</a
-      ><a name="86"
-      > </a
-      ><a name="87" class="PrimitiveType"
+      > <a name="87" class="PrimitiveType"
       >Set</a
-      ><a name="90"
-      > </a
-      ><a name="91" class="Keyword"
+      > <a name="91" class="Keyword"
       >where</a
-      ><a name="96"
       >
-  </a
-      ><a name="Nat.zero" href="Indenting.html#Nat.zero" class="InductiveConstructor"
+  <a name="Nat.zero" href="Indenting.html#Nat.zero" class="InductiveConstructor"
       >zero</a
-      ><a name="103"
-      > </a
-      ><a name="104" class="Symbol"
+      > <a name="104" class="Symbol"
       >:</a
-      ><a name="105"
-      > </a
-      ><a name="106" href="Indenting.html#Nat" class="Datatype"
+      > <a name="106" href="Indenting.html#Nat" class="Datatype"
       >Nat</a
-      ><a name="109"
       >
-  </a
-      ><a name="Nat.suc" href="Indenting.html#Nat.suc" class="InductiveConstructor"
+  <a name="Nat.suc" href="Indenting.html#Nat.suc" class="InductiveConstructor"
       >suc</a
-      ><a name="115"
-      > </a
-      ><a name="116" class="Symbol"
+      > <a name="116" class="Symbol"
       >:</a
-      ><a name="117"
-      > </a
-      ><a name="118" href="Indenting.html#Nat" class="Datatype"
+      > <a name="118" href="Indenting.html#Nat" class="Datatype"
       >Nat</a
-      ><a name="121"
-      > </a
-      ><a name="122" class="Symbol"
+      > <a name="122" class="Symbol"
       >-&gt;</a
-      ><a name="124"
-      > </a
-      ><a name="125" href="Indenting.html#Nat" class="Datatype"
+      > <a name="125" href="Indenting.html#Nat" class="Datatype"
       >Nat</a
-      ><a name="128"
       >
-\end{code}</a
-      ><a name="139" class="Comment"
+\end{code}<a name="139" class="Comment"
       >
 
 \end{document}
