--- a/test/LaTeXAndHTML/succeed/Indenting2.html
+++ b/test/LaTeXAndHTML/succeed/Indenting2.html
@@ -17,65 +17,37 @@
 \begin{document}
 
 </a
-      ><a name="63"
       >\begin{code}
-</a
-      ><a name="76" class="Keyword"
+<a name="76" class="Keyword"
       >data</a
-      ><a name="80"
-      > </a
-      ><a name="Nat" href="Indenting2.html#Nat" class="Datatype"
+      > <a name="Nat" href="Indenting2.html#Nat" class="Datatype"
       >Nat</a
-      ><a name="84"
-      > </a
-      ><a name="85" class="Symbol"
+      > <a name="85" class="Symbol"
       >:</a
-      ><a name="86"
-      > </a
-      ><a name="87" class="PrimitiveType"
+      > <a name="87" class="PrimitiveType"
       >Set</a
-      ><a name="90"
-      > </a
-      ><a name="91" class="Keyword"
+      > <a name="91" class="Keyword"
       >where</a
-      ><a name="96"
       >
-  </a
-      ><a name="Nat.zero" href="Indenting2.html#Nat.zero" class="InductiveConstructor"
+  <a name="Nat.zero" href="Indenting2.html#Nat.zero" class="InductiveConstructor"
       >zero</a
-      ><a name="103"
-      >  </a
-      ><a name="105" class="Symbol"
+      >  <a name="105" class="Symbol"
       >:</a
-      ><a name="106"
-      > </a
-      ><a name="107" href="Indenting2.html#Nat" class="Datatype"
+      > <a name="107" href="Indenting2.html#Nat" class="Datatype"
       >Nat</a
-      ><a name="110"
       >
-  </a
-      ><a name="Nat.suc" href="Indenting2.html#Nat.suc" class="InductiveConstructor"
+  <a name="Nat.suc" href="Indenting2.html#Nat.suc" class="InductiveConstructor"
       >suc</a
-      ><a name="116"
-      >   </a
-      ><a name="119" class="Symbol"
+      >   <a name="119" class="Symbol"
       >:</a
-      ><a name="120"
-      > </a
-      ><a name="121" href="Indenting2.html#Nat" class="Datatype"
+      > <a name="121" href="Indenting2.html#Nat" class="Datatype"
       >Nat</a
-      ><a name="124"
-      > </a
-      ><a name="125" class="Symbol"
+      > <a name="125" class="Symbol"
       >-&gt;</a
-      ><a name="127"
-      > </a
-      ><a name="128" href="Indenting2.html#Nat" class="Datatype"
+      > <a name="128" href="Indenting2.html#Nat" class="Datatype"
       >Nat</a
-      ><a name="131"
       >
-\end{code}</a
-      ><a name="142" class="Comment"
+\end{code}<a name="142" class="Comment"
       >
 
 \end{document}
