--- a/test/LaTeXAndHTML/succeed/Indenting5.html
+++ b/test/LaTeXAndHTML/succeed/Indenting5.html
@@ -17,129 +17,75 @@
 \begin{document}
 
 </a
-      ><a name="63"
       >\begin{code}
-</a
-      ><a name="76" class="Keyword"
+<a name="76" class="Keyword"
       >record</a
-      ><a name="82"
-      > </a
-      ><a name="Sigma" href="Indenting5.html#Sigma" class="Record"
+      > <a name="Sigma" href="Indenting5.html#Sigma" class="Record"
       >Sigma</a
-      ><a name="88"
-      > </a
-      ><a name="89" class="Symbol"
+      > <a name="89" class="Symbol"
       >(</a
       ><a name="90" href="Indenting5.html#90" class="Bound"
       >A</a
-      ><a name="91"
-      > </a
-      ><a name="92" class="Symbol"
+      > <a name="92" class="Symbol"
       >:</a
-      ><a name="93"
-      > </a
-      ><a name="94" class="PrimitiveType"
+      > <a name="94" class="PrimitiveType"
       >Set</a
       ><a name="97" class="Symbol"
       >)</a
-      ><a name="98"
-      > </a
-      ><a name="99" class="Symbol"
+      > <a name="99" class="Symbol"
       >(</a
       ><a name="100" href="Indenting5.html#100" class="Bound"
       >B</a
-      ><a name="101"
-      > </a
-      ><a name="102" class="Symbol"
+      > <a name="102" class="Symbol"
       >:</a
-      ><a name="103"
-      > </a
-      ><a name="104" href="Indenting5.html#90" class="Bound"
+      > <a name="104" href="Indenting5.html#90" class="Bound"
       >A</a
-      ><a name="105"
-      > </a
-      ><a name="106" class="Symbol"
+      > <a name="106" class="Symbol"
       >&#8594;</a
-      ><a name="107"
-      > </a
-      ><a name="108" class="PrimitiveType"
+      > <a name="108" class="PrimitiveType"
       >Set</a
       ><a name="111" class="Symbol"
       >)</a
-      ><a name="112"
-      > </a
-      ><a name="113" class="Symbol"
+      > <a name="113" class="Symbol"
       >:</a
-      ><a name="114"
-      > </a
-      ><a name="115" class="PrimitiveType"
+      > <a name="115" class="PrimitiveType"
       >Set</a
-      ><a name="118"
-      > </a
-      ><a name="119" class="Keyword"
+      > <a name="119" class="Keyword"
       >where</a
-      ><a name="124"
       >
-  </a
-      ><a name="127" class="Keyword"
+  <a name="127" class="Keyword"
       >constructor</a
-      ><a name="138"
-      > </a
-      ><a name="Sigma._,_" href="Indenting5.html#Sigma._,_" class="InductiveConstructor Operator"
+      > <a name="Sigma._,_" href="Indenting5.html#Sigma._,_" class="InductiveConstructor Operator"
       >_,_</a
-      ><a name="142"
       >
-  </a
-      ><a name="145" class="Keyword"
+  <a name="145" class="Keyword"
       >field</a
-      ><a name="150"
       >
-    </a
-      ><a name="Sigma.proj&#8321;" href="Indenting5.html#Sigma.proj&#8321;" class="Field"
+    <a name="Sigma.proj&#8321;" href="Indenting5.html#Sigma.proj&#8321;" class="Field"
       >proj&#8321;</a
-      ><a name="160"
-      > </a
-      ><a name="161" class="Symbol"
+      > <a name="161" class="Symbol"
       >:</a
-      ><a name="162"
-      > </a
-      ><a name="163" href="Indenting5.html#90" class="Bound"
+      > <a name="163" href="Indenting5.html#90" class="Bound"
       >A</a
-      ><a name="164"
       >
-    </a
-      ><a name="Sigma.proj&#8322;" href="Indenting5.html#Sigma.proj&#8322;" class="Field"
+    <a name="Sigma.proj&#8322;" href="Indenting5.html#Sigma.proj&#8322;" class="Field"
       >proj&#8322;</a
-      ><a name="174"
-      > </a
-      ><a name="175" class="Symbol"
+      > <a name="175" class="Symbol"
       >:</a
-      ><a name="176"
-      > </a
-      ><a name="177" href="Indenting5.html#100" class="Bound"
+      > <a name="177" href="Indenting5.html#100" class="Bound"
       >B</a
-      ><a name="178"
-      > </a
-      ><a name="179" href="Indenting5.html#Sigma.proj&#8321;" class="Field"
+      > <a name="179" href="Indenting5.html#Sigma.proj&#8321;" class="Field"
       >proj&#8321;</a
-      ><a name="184"
       >
 
-</a
-      ><a name="186" class="Keyword"
+<a name="186" class="Keyword"
       >open</a
-      ><a name="190"
-      > </a
-      ><a name="191" href="Indenting5.html#Sigma" class="Module"
+      > <a name="191" href="Indenting5.html#Sigma" class="Module"
       >Sigma</a
-      ><a name="196"
-      > </a
-      ><a name="197" class="Keyword"
+      > <a name="197" class="Keyword"
       >public</a
-      ><a name="203"
       >
-\end{code}</a
-      ><a name="214" class="Comment"
+\end{code}<a name="214" class="Comment"
       >
 
 \end{document}
