--- a/test/LaTeXAndHTML/succeed/Issue2536.html
+++ b/test/LaTeXAndHTML/succeed/Issue2536.html
@@ -18,81 +18,47 @@
 \begin{document}
 
 </a
-      ><a name="76"
       >\begin{code}
-</a
-      ><a name="89" class="Keyword"
+<a name="89" class="Keyword"
       >module</a
-      ><a name="95"
-      > </a
-      ><a name="96" href="Issue2536.html#Issue2536" class="Module"
+      > <a name="96" href="Issue2536.html#Issue2536" class="Module"
       >_</a
-      ><a name="97"
-      > </a
-      ><a name="98" class="Keyword"
+      > <a name="98" class="Keyword"
       >where</a
-      ><a name="103"
       >
-</a
-      ><a name="id" href="Issue2536.html#id" class="Function"
+<a name="id" href="Issue2536.html#id" class="Function"
       >id</a
-      ><a name="106"
-      > </a
-      ><a name="107" class="Symbol"
+      > <a name="107" class="Symbol"
       >:</a
-      ><a name="108"
-      > </a
-      ><a name="109" class="Symbol"
+      > <a name="109" class="Symbol"
       >{</a
       ><a name="110" href="Issue2536.html#110" class="Bound"
       >A</a
-      ><a name="111"
-      > </a
-      ><a name="112" class="Symbol"
+      > <a name="112" class="Symbol"
       >:</a
-      ><a name="113"
-      > </a
-      ><a name="114" class="PrimitiveType"
+      > <a name="114" class="PrimitiveType"
       >Set</a
       ><a name="117" class="Symbol"
       >}</a
-      ><a name="118"
-      > </a
-      ><a name="119" class="Symbol"
+      > <a name="119" class="Symbol"
       >&#8594;</a
-      ><a name="120"
-      > </a
-      ><a name="121" href="Issue2536.html#110" class="Bound"
+      > <a name="121" href="Issue2536.html#110" class="Bound"
       >A</a
-      ><a name="122"
-      > </a
-      ><a name="123" class="Symbol"
+      > <a name="123" class="Symbol"
       >&#8594;</a
-      ><a name="124"
-      > </a
-      ><a name="125" href="Issue2536.html#110" class="Bound"
+      > <a name="125" href="Issue2536.html#110" class="Bound"
       >A</a
-      ><a name="126"
       >
-</a
-      ><a name="127" href="Issue2536.html#id" class="Function"
+<a name="127" href="Issue2536.html#id" class="Function"
       >id</a
-      ><a name="129"
-      > </a
-      ><a name="130" href="Issue2536.html#130" class="Bound"
+      > <a name="130" href="Issue2536.html#130" class="Bound"
       >x</a
-      ><a name="131"
-      > </a
-      ><a name="132" class="Symbol"
+      > <a name="132" class="Symbol"
       >=</a
-      ><a name="133"
-      > </a
-      ><a name="134" href="Issue2536.html#130" class="Bound"
+      > <a name="134" href="Issue2536.html#130" class="Bound"
       >x</a
-      ><a name="135"
       >
-\end{code}</a
-      ><a name="146" class="Comment"
+\end{code}<a name="146" class="Comment"
       >
 
 \end{document}
