--- a/test/LaTeXAndHTML/succeed/MdQuotedDelim.html
+++ b/test/LaTeXAndHTML/succeed/MdQuotedDelim.html
@@ -9,116 +9,66 @@
      /></head
   ><body
   ><pre
-    ><a name="1"
-      >```
-  </a
-      ><a name="7" class="Keyword"
+    >```
+  <a name="7" class="Keyword"
       >module</a
-      ><a name="13"
-      > </a
-      ><a name="14" href="MdQuotedDelim.html#MdQuotedDelim" class="Module"
+      > <a name="14" href="MdQuotedDelim.html#MdQuotedDelim" class="Module"
       >MdQuotedDelim</a
-      ><a name="27"
-      > </a
-      ><a name="28" class="Keyword"
+      > <a name="28" class="Keyword"
       >where</a
-      ><a name="33"
       >
 
-        </a
-      ><a name="43" class="Keyword"
+        <a name="43" class="Keyword"
       >data</a
-      ><a name="47"
-      > </a
-      ><a name="Bool" href="MdQuotedDelim.html#Bool" class="Datatype"
+      > <a name="Bool" href="MdQuotedDelim.html#Bool" class="Datatype"
       >Bool</a
-      ><a name="52"
-      > </a
-      ><a name="53" class="Symbol"
+      > <a name="53" class="Symbol"
       >:</a
-      ><a name="54"
-      > </a
-      ><a name="55" class="PrimitiveType"
+      > <a name="55" class="PrimitiveType"
       >Set</a
-      ><a name="58"
-      > </a
-      ><a name="59" class="Keyword"
+      > <a name="59" class="Keyword"
       >where</a
-      ><a name="64"
       >
-            </a
-      ><a name="Bool.true" href="MdQuotedDelim.html#Bool.true" class="InductiveConstructor"
+            <a name="Bool.true" href="MdQuotedDelim.html#Bool.true" class="InductiveConstructor"
       >true</a
-      ><a name="81"
-      > </a
-      ><a name="82" class="Symbol"
+      > <a name="82" class="Symbol"
       >:</a
-      ><a name="83"
-      > </a
-      ><a name="84" href="MdQuotedDelim.html#Bool" class="Datatype"
+      > <a name="84" href="MdQuotedDelim.html#Bool" class="Datatype"
       >Bool</a
-      ><a name="88"
       >
-            </a
-      ><a name="Bool.false" href="MdQuotedDelim.html#Bool.false" class="InductiveConstructor"
+            <a name="Bool.false" href="MdQuotedDelim.html#Bool.false" class="InductiveConstructor"
       >false</a
-      ><a name="106"
-      > </a
-      ><a name="107" class="Symbol"
+      > <a name="107" class="Symbol"
       >:</a
-      ><a name="108"
-      > </a
-      ><a name="109" href="MdQuotedDelim.html#Bool" class="Datatype"
+      > <a name="109" href="MdQuotedDelim.html#Bool" class="Datatype"
       >Bool</a
-      ><a name="113"
       >
-            </a
-      ><a name="Bool.aa" href="MdQuotedDelim.html#Bool.aa" class="InductiveConstructor"
+            <a name="Bool.aa" href="MdQuotedDelim.html#Bool.aa" class="InductiveConstructor"
       >aa</a
-      ><a name="128"
-      > </a
-      ><a name="129" class="Symbol"
+      > <a name="129" class="Symbol"
       >:</a
-      ><a name="130"
-      > </a
-      ><a name="131" class="Comment"
+      > <a name="131" class="Comment"
       >{- ``` -}</a
-      ><a name="140"
-      > </a
-      ><a name="141" href="MdQuotedDelim.html#Bool" class="Datatype"
+      > <a name="141" href="MdQuotedDelim.html#Bool" class="Datatype"
       >Bool</a
-      ><a name="145"
       >
 
-        </a
-      ><a name="a" href="MdQuotedDelim.html#a" class="Function"
+        <a name="a" href="MdQuotedDelim.html#a" class="Function"
       >a</a
-      ><a name="156"
-      > </a
-      ><a name="157" class="Symbol"
+      > <a name="157" class="Symbol"
       >:</a
-      ><a name="158"
-      > </a
-      ><a name="159" href="MdQuotedDelim.html#Bool" class="Datatype"
+      > <a name="159" href="MdQuotedDelim.html#Bool" class="Datatype"
       >Bool</a
-      ><a name="163"
       >
-        </a
-      ><a name="172" href="MdQuotedDelim.html#a" class="Function"
+        <a name="172" href="MdQuotedDelim.html#a" class="Function"
       >a</a
-      ><a name="173"
-      > </a
-      ><a name="174" class="Symbol"
+      > <a name="174" class="Symbol"
       >=</a
-      ><a name="175"
-      > </a
-      ><a name="176" href="MdQuotedDelim.html#Bool.true" class="InductiveConstructor"
+      > <a name="176" href="MdQuotedDelim.html#Bool.true" class="InductiveConstructor"
       >true</a
-      ><a name="180"
       >
 ```
-</a
-      ></pre
+</pre
     ></body
   ></html
 >
