--- a/test/LaTeXAndHTML/succeed/Options.html
+++ b/test/LaTeXAndHTML/succeed/Options.html
@@ -17,32 +17,20 @@
 \begin{document}
 
 </a
-      ><a name="63"
       >\begin{code}
-</a
-      ><a name="76" class="Symbol"
+<a name="76" class="Symbol"
       >{-#</a
-      ><a name="79"
-      > </a
-      ><a name="80" class="Keyword"
+      > <a name="80" class="Keyword"
       >OPTIONS</a
-      ><a name="87"
-      >  </a
-      ><a name="89" class="Option"
+      >  <a name="89" class="Option"
       >--no-positivity-check</a
-      ><a name="110"
       >
-             </a
-      ><a name="124" class="Option"
+             <a name="124" class="Option"
       >--no-termination-check</a
-      ><a name="146"
-      > </a
-      ><a name="147" class="Symbol"
+      > <a name="147" class="Symbol"
       >#-}</a
-      ><a name="150"
       >
-\end{code}</a
-      ><a name="161" class="Comment"
+\end{code}<a name="161" class="Comment"
       >
 
 \end{document}
