--- a/test/LaTeXAndHTML/succeed/PatternSynonyms.html
+++ b/test/LaTeXAndHTML/succeed/PatternSynonyms.html
@@ -15,138 +15,78 @@
 \begin{document}
 
 </a
-      ><a name="61"
       >\begin{code}
-</a
-      ><a name="74" class="Keyword"
+<a name="74" class="Keyword"
       >data</a
-      ><a name="78"
-      > </a
-      ><a name="Nat" href="PatternSynonyms.html#Nat" class="Datatype"
+      > <a name="Nat" href="PatternSynonyms.html#Nat" class="Datatype"
       >Nat</a
-      ><a name="82"
-      > </a
-      ><a name="83" class="Symbol"
+      > <a name="83" class="Symbol"
       >:</a
-      ><a name="84"
-      > </a
-      ><a name="85" class="PrimitiveType"
+      > <a name="85" class="PrimitiveType"
       >Set</a
-      ><a name="88"
-      > </a
-      ><a name="89" class="Keyword"
+      > <a name="89" class="Keyword"
       >where</a
-      ><a name="94"
       >
-  </a
-      ><a name="Nat.zero" href="PatternSynonyms.html#Nat.zero" class="InductiveConstructor"
+  <a name="Nat.zero" href="PatternSynonyms.html#Nat.zero" class="InductiveConstructor"
       >zero</a
-      ><a name="101"
-      > </a
-      ><a name="102" class="Symbol"
+      > <a name="102" class="Symbol"
       >:</a
-      ><a name="103"
-      > </a
-      ><a name="104" href="PatternSynonyms.html#Nat" class="Datatype"
+      > <a name="104" href="PatternSynonyms.html#Nat" class="Datatype"
       >Nat</a
-      ><a name="107"
       >
-  </a
-      ><a name="Nat.suc" href="PatternSynonyms.html#Nat.suc" class="InductiveConstructor"
+  <a name="Nat.suc" href="PatternSynonyms.html#Nat.suc" class="InductiveConstructor"
       >suc</a
-      ><a name="113"
-      > </a
-      ><a name="114" class="Symbol"
+      > <a name="114" class="Symbol"
       >:</a
-      ><a name="115"
-      > </a
-      ><a name="116" href="PatternSynonyms.html#Nat" class="Datatype"
+      > <a name="116" href="PatternSynonyms.html#Nat" class="Datatype"
       >Nat</a
-      ><a name="119"
-      > </a
-      ><a name="120" class="Symbol"
+      > <a name="120" class="Symbol"
       >&#8594;</a
-      ><a name="121"
-      > </a
-      ><a name="122" href="PatternSynonyms.html#Nat" class="Datatype"
+      > <a name="122" href="PatternSynonyms.html#Nat" class="Datatype"
       >Nat</a
-      ><a name="125"
       >
 
-</a
-      ><a name="127" class="Keyword"
+<a name="127" class="Keyword"
       >pattern</a
-      ><a name="134"
-      > </a
-      ><a name="two" href="PatternSynonyms.html#two" class="InductiveConstructor"
+      > <a name="two" href="PatternSynonyms.html#two" class="InductiveConstructor"
       >two</a
-      ><a name="138"
-      >   </a
-      ><a name="141" class="Symbol"
+      >   <a name="141" class="Symbol"
       >=</a
-      ><a name="142"
-      > </a
-      ><a name="143" href="PatternSynonyms.html#Nat.suc" class="InductiveConstructor"
+      > <a name="143" href="PatternSynonyms.html#Nat.suc" class="InductiveConstructor"
       >suc</a
-      ><a name="146"
-      > </a
-      ><a name="147" class="Symbol"
+      > <a name="147" class="Symbol"
       >(</a
       ><a name="148" href="PatternSynonyms.html#Nat.suc" class="InductiveConstructor"
       >suc</a
-      ><a name="151"
-      > </a
-      ><a name="152" href="PatternSynonyms.html#Nat.zero" class="InductiveConstructor"
+      > <a name="152" href="PatternSynonyms.html#Nat.zero" class="InductiveConstructor"
       >zero</a
       ><a name="156" class="Symbol"
       >)</a
-      ><a name="157"
       >
-</a
-      ><a name="158" class="Keyword"
+<a name="158" class="Keyword"
       >pattern</a
-      ><a name="165"
-      > </a
-      ><a name="three" href="PatternSynonyms.html#three" class="InductiveConstructor"
+      > <a name="three" href="PatternSynonyms.html#three" class="InductiveConstructor"
       >three</a
-      ><a name="171"
-      > </a
-      ><a name="172" class="Symbol"
+      > <a name="172" class="Symbol"
       >=</a
-      ><a name="173"
-      > </a
-      ><a name="174" href="PatternSynonyms.html#Nat.suc" class="InductiveConstructor"
+      > <a name="174" href="PatternSynonyms.html#Nat.suc" class="InductiveConstructor"
       >suc</a
-      ><a name="177"
-      > </a
-      ><a name="178" href="PatternSynonyms.html#two" class="InductiveConstructor"
+      > <a name="178" href="PatternSynonyms.html#two" class="InductiveConstructor"
       >two</a
-      ><a name="181"
       >
 
-</a
-      ><a name="183" class="Keyword"
+<a name="183" class="Keyword"
       >data</a
-      ><a name="187"
-      > </a
-      ><a name="Bot" href="PatternSynonyms.html#Bot" class="Datatype"
+      > <a name="Bot" href="PatternSynonyms.html#Bot" class="Datatype"
       >Bot</a
-      ><a name="191"
-      > </a
-      ><a name="192" class="Symbol"
+      > <a name="192" class="Symbol"
       >:</a
-      ><a name="193"
-      > </a
-      ><a name="194" class="PrimitiveType"
+      > <a name="194" class="PrimitiveType"
       >Set</a
-      ><a name="197"
-      > </a
-      ><a name="198" class="Keyword"
+      > <a name="198" class="Keyword"
       >where</a
-      ><a name="203"
       >
-\end{code}</a
-      ><a name="214" class="Comment"
+\end{code}<a name="214" class="Comment"
       >
 
 \end{document}
