--- a/test/LaTeXAndHTML/succeed/PatternSynonyms2.html
+++ b/test/LaTeXAndHTML/succeed/PatternSynonyms2.html
@@ -15,152 +15,86 @@
 \begin{document}
 
 </a
-      ><a name="61"
       >\begin{code}
-</a
-      ><a name="74" class="Keyword"
+<a name="74" class="Keyword"
       >data</a
-      ><a name="78"
-      > </a
-      ><a name="Nat" href="PatternSynonyms2.html#Nat" class="Datatype"
+      > <a name="Nat" href="PatternSynonyms2.html#Nat" class="Datatype"
       >Nat</a
-      ><a name="82"
-      > </a
-      ><a name="83" class="Symbol"
+      > <a name="83" class="Symbol"
       >:</a
-      ><a name="84"
-      > </a
-      ><a name="85" class="PrimitiveType"
+      > <a name="85" class="PrimitiveType"
       >Set</a
-      ><a name="88"
-      > </a
-      ><a name="89" class="Keyword"
+      > <a name="89" class="Keyword"
       >where</a
-      ><a name="94"
       >
-  </a
-      ><a name="Nat.zero" href="PatternSynonyms2.html#Nat.zero" class="InductiveConstructor"
+  <a name="Nat.zero" href="PatternSynonyms2.html#Nat.zero" class="InductiveConstructor"
       >zero</a
-      ><a name="101"
-      > </a
-      ><a name="102" class="Symbol"
+      > <a name="102" class="Symbol"
       >:</a
-      ><a name="103"
-      > </a
-      ><a name="104" href="PatternSynonyms2.html#Nat" class="Datatype"
+      > <a name="104" href="PatternSynonyms2.html#Nat" class="Datatype"
       >Nat</a
-      ><a name="107"
       >
-  </a
-      ><a name="Nat.suc" href="PatternSynonyms2.html#Nat.suc" class="InductiveConstructor"
+  <a name="Nat.suc" href="PatternSynonyms2.html#Nat.suc" class="InductiveConstructor"
       >suc</a
-      ><a name="113"
-      > </a
-      ><a name="114" class="Symbol"
+      > <a name="114" class="Symbol"
       >:</a
-      ><a name="115"
-      > </a
-      ><a name="116" href="PatternSynonyms2.html#Nat" class="Datatype"
+      > <a name="116" href="PatternSynonyms2.html#Nat" class="Datatype"
       >Nat</a
-      ><a name="119"
-      > </a
-      ><a name="120" class="Symbol"
+      > <a name="120" class="Symbol"
       >&#8594;</a
-      ><a name="121"
-      > </a
-      ><a name="122" href="PatternSynonyms2.html#Nat" class="Datatype"
+      > <a name="122" href="PatternSynonyms2.html#Nat" class="Datatype"
       >Nat</a
-      ><a name="125"
       >
 
-</a
-      ><a name="127" class="Keyword"
+<a name="127" class="Keyword"
       >module</a
-      ><a name="133"
-      > </a
-      ><a name="134" href="PatternSynonyms2.html#134" class="Module"
+      > <a name="134" href="PatternSynonyms2.html#134" class="Module"
       >_</a
-      ><a name="135"
-      > </a
-      ><a name="136" class="Keyword"
+      > <a name="136" class="Keyword"
       >where</a
-      ><a name="141"
       >
 
-  </a
-      ><a name="145" class="Keyword"
+  <a name="145" class="Keyword"
       >pattern</a
-      ><a name="152"
-      > </a
-      ><a name="153" href="PatternSynonyms2.html#153" class="InductiveConstructor"
+      > <a name="153" href="PatternSynonyms2.html#153" class="InductiveConstructor"
       >two</a
-      ><a name="156"
-      >   </a
-      ><a name="159" class="Symbol"
+      >   <a name="159" class="Symbol"
       >=</a
-      ><a name="160"
-      > </a
-      ><a name="161" href="PatternSynonyms2.html#Nat.suc" class="InductiveConstructor"
+      > <a name="161" href="PatternSynonyms2.html#Nat.suc" class="InductiveConstructor"
       >suc</a
-      ><a name="164"
-      > </a
-      ><a name="165" class="Symbol"
+      > <a name="165" class="Symbol"
       >(</a
       ><a name="166" href="PatternSynonyms2.html#Nat.suc" class="InductiveConstructor"
       >suc</a
-      ><a name="169"
-      > </a
-      ><a name="170" href="PatternSynonyms2.html#Nat.zero" class="InductiveConstructor"
+      > <a name="170" href="PatternSynonyms2.html#Nat.zero" class="InductiveConstructor"
       >zero</a
       ><a name="174" class="Symbol"
       >)</a
-      ><a name="175"
       >
-  </a
-      ><a name="178" class="Keyword"
+  <a name="178" class="Keyword"
       >pattern</a
-      ><a name="185"
-      > </a
-      ><a name="186" href="PatternSynonyms2.html#186" class="InductiveConstructor"
+      > <a name="186" href="PatternSynonyms2.html#186" class="InductiveConstructor"
       >three</a
-      ><a name="191"
-      > </a
-      ><a name="192" class="Symbol"
+      > <a name="192" class="Symbol"
       >=</a
-      ><a name="193"
-      > </a
-      ><a name="194" href="PatternSynonyms2.html#Nat.suc" class="InductiveConstructor"
+      > <a name="194" href="PatternSynonyms2.html#Nat.suc" class="InductiveConstructor"
       >suc</a
-      ><a name="197"
-      > </a
-      ><a name="198" href="PatternSynonyms2.html#153" class="InductiveConstructor"
+      > <a name="198" href="PatternSynonyms2.html#153" class="InductiveConstructor"
       >two</a
-      ><a name="201"
       >
 
-</a
-      ><a name="203" class="Keyword"
+<a name="203" class="Keyword"
       >data</a
-      ><a name="207"
-      > </a
-      ><a name="Bot" href="PatternSynonyms2.html#Bot" class="Datatype"
+      > <a name="Bot" href="PatternSynonyms2.html#Bot" class="Datatype"
       >Bot</a
-      ><a name="211"
-      > </a
-      ><a name="212" class="Symbol"
+      > <a name="212" class="Symbol"
       >:</a
-      ><a name="213"
-      > </a
-      ><a name="214" class="PrimitiveType"
+      > <a name="214" class="PrimitiveType"
       >Set</a
-      ><a name="217"
-      > </a
-      ><a name="218" class="Keyword"
+      > <a name="218" class="Keyword"
       >where</a
-      ><a name="223"
       >
-\end{code}</a
-      ><a name="234" class="Comment"
+\end{code}<a name="234" class="Comment"
       >
 
 \end{document}
