--- a/test/LaTeXAndHTML/succeed/PatternSynonyms3.html
+++ b/test/LaTeXAndHTML/succeed/PatternSynonyms3.html
@@ -15,181 +15,101 @@
 \begin{document}
 
 </a
-      ><a name="61"
       >\begin{code}
-</a
-      ><a name="74" class="Keyword"
+<a name="74" class="Keyword"
       >data</a
-      ><a name="78"
-      > </a
-      ><a name="Nat" href="PatternSynonyms3.html#Nat" class="Datatype"
+      > <a name="Nat" href="PatternSynonyms3.html#Nat" class="Datatype"
       >Nat</a
-      ><a name="82"
-      > </a
-      ><a name="83" class="Symbol"
+      > <a name="83" class="Symbol"
       >:</a
-      ><a name="84"
-      > </a
-      ><a name="85" class="PrimitiveType"
+      > <a name="85" class="PrimitiveType"
       >Set</a
-      ><a name="88"
-      > </a
-      ><a name="89" class="Keyword"
+      > <a name="89" class="Keyword"
       >where</a
-      ><a name="94"
       >
-  </a
-      ><a name="Nat.zero" href="PatternSynonyms3.html#Nat.zero" class="InductiveConstructor"
+  <a name="Nat.zero" href="PatternSynonyms3.html#Nat.zero" class="InductiveConstructor"
       >zero</a
-      ><a name="101"
-      > </a
-      ><a name="102" class="Symbol"
+      > <a name="102" class="Symbol"
       >:</a
-      ><a name="103"
-      > </a
-      ><a name="104" href="PatternSynonyms3.html#Nat" class="Datatype"
+      > <a name="104" href="PatternSynonyms3.html#Nat" class="Datatype"
       >Nat</a
-      ><a name="107"
       >
-  </a
-      ><a name="Nat.suc" href="PatternSynonyms3.html#Nat.suc" class="InductiveConstructor"
+  <a name="Nat.suc" href="PatternSynonyms3.html#Nat.suc" class="InductiveConstructor"
       >suc</a
-      ><a name="113"
-      > </a
-      ><a name="114" class="Symbol"
+      > <a name="114" class="Symbol"
       >:</a
-      ><a name="115"
-      > </a
-      ><a name="116" href="PatternSynonyms3.html#Nat" class="Datatype"
+      > <a name="116" href="PatternSynonyms3.html#Nat" class="Datatype"
       >Nat</a
-      ><a name="119"
-      > </a
-      ><a name="120" class="Symbol"
+      > <a name="120" class="Symbol"
       >&#8594;</a
-      ><a name="121"
-      > </a
-      ><a name="122" href="PatternSynonyms3.html#Nat" class="Datatype"
+      > <a name="122" href="PatternSynonyms3.html#Nat" class="Datatype"
       >Nat</a
-      ><a name="125"
       >
 
-</a
-      ><a name="127" class="Keyword"
+<a name="127" class="Keyword"
       >pattern</a
-      ><a name="134"
-      > </a
-      ><a name="two" href="PatternSynonyms3.html#two" class="InductiveConstructor"
+      > <a name="two" href="PatternSynonyms3.html#two" class="InductiveConstructor"
       >two</a
-      ><a name="138"
-      >   </a
-      ><a name="141" class="Symbol"
+      >   <a name="141" class="Symbol"
       >=</a
-      ><a name="142"
-      > </a
-      ><a name="143" href="PatternSynonyms3.html#Nat.suc" class="InductiveConstructor"
+      > <a name="143" href="PatternSynonyms3.html#Nat.suc" class="InductiveConstructor"
       >suc</a
-      ><a name="146"
-      > </a
-      ><a name="147" class="Symbol"
+      > <a name="147" class="Symbol"
       >(</a
       ><a name="148" href="PatternSynonyms3.html#Nat.suc" class="InductiveConstructor"
       >suc</a
-      ><a name="151"
-      > </a
-      ><a name="152" href="PatternSynonyms3.html#Nat.zero" class="InductiveConstructor"
+      > <a name="152" href="PatternSynonyms3.html#Nat.zero" class="InductiveConstructor"
       >zero</a
       ><a name="156" class="Symbol"
       >)</a
-      ><a name="157"
       >
-</a
-      ><a name="158" class="Keyword"
+<a name="158" class="Keyword"
       >pattern</a
-      ><a name="165"
-      > </a
-      ><a name="three" href="PatternSynonyms3.html#three" class="InductiveConstructor"
+      > <a name="three" href="PatternSynonyms3.html#three" class="InductiveConstructor"
       >three</a
-      ><a name="171"
-      > </a
-      ><a name="172" class="Symbol"
+      > <a name="172" class="Symbol"
       >=</a
-      ><a name="173"
-      > </a
-      ><a name="174" href="PatternSynonyms3.html#Nat.suc" class="InductiveConstructor"
+      > <a name="174" href="PatternSynonyms3.html#Nat.suc" class="InductiveConstructor"
       >suc</a
-      ><a name="177"
-      > </a
-      ><a name="178" href="PatternSynonyms3.html#two" class="InductiveConstructor"
+      > <a name="178" href="PatternSynonyms3.html#two" class="InductiveConstructor"
       >two</a
-      ><a name="181"
       >
-</a
-      ><a name="182" class="Keyword"
+<a name="182" class="Keyword"
       >pattern</a
-      ><a name="189"
-      > </a
-      ><a name="four" href="PatternSynonyms3.html#four" class="InductiveConstructor"
+      > <a name="four" href="PatternSynonyms3.html#four" class="InductiveConstructor"
       >four</a
-      ><a name="194"
-      >  </a
-      ><a name="196" class="Symbol"
+      >  <a name="196" class="Symbol"
       >=</a
-      ><a name="197"
-      > </a
-      ><a name="198" href="PatternSynonyms3.html#Nat.suc" class="InductiveConstructor"
+      > <a name="198" href="PatternSynonyms3.html#Nat.suc" class="InductiveConstructor"
       >suc</a
-      ><a name="201"
-      > </a
-      ><a name="202" href="PatternSynonyms3.html#three" class="InductiveConstructor"
+      > <a name="202" href="PatternSynonyms3.html#three" class="InductiveConstructor"
       >three</a
-      ><a name="207"
       >
 
-</a
-      ><a name="209" class="Keyword"
+<a name="209" class="Keyword"
       >pattern</a
-      ><a name="216"
-      > </a
-      ><a name="five" href="PatternSynonyms3.html#five" class="InductiveConstructor"
+      > <a name="five" href="PatternSynonyms3.html#five" class="InductiveConstructor"
       >five</a
-      ><a name="221"
-      >  </a
-      ><a name="223" class="Symbol"
+      >  <a name="223" class="Symbol"
       >=</a
-      ><a name="224"
-      > </a
-      ><a name="225" href="PatternSynonyms3.html#Nat.suc" class="InductiveConstructor"
+      > <a name="225" href="PatternSynonyms3.html#Nat.suc" class="InductiveConstructor"
       >suc</a
-      ><a name="228"
-      > </a
-      ><a name="229" href="PatternSynonyms3.html#four" class="InductiveConstructor"
+      > <a name="229" href="PatternSynonyms3.html#four" class="InductiveConstructor"
       >four</a
-      ><a name="233"
       >
 
-</a
-      ><a name="235" class="Keyword"
+<a name="235" class="Keyword"
       >data</a
-      ><a name="239"
-      > </a
-      ><a name="Bot" href="PatternSynonyms3.html#Bot" class="Datatype"
+      > <a name="Bot" href="PatternSynonyms3.html#Bot" class="Datatype"
       >Bot</a
-      ><a name="243"
-      > </a
-      ><a name="244" class="Symbol"
+      > <a name="244" class="Symbol"
       >:</a
-      ><a name="245"
-      > </a
-      ><a name="246" class="PrimitiveType"
+      > <a name="246" class="PrimitiveType"
       >Set</a
-      ><a name="249"
-      > </a
-      ><a name="250" class="Keyword"
+      > <a name="250" class="Keyword"
       >where</a
-      ><a name="255"
       >
-\end{code}</a
-      ><a name="266" class="Comment"
+\end{code}<a name="266" class="Comment"
       >
 
 \end{document}
