--- a/test/LaTeXAndHTML/succeed/QuickLaTeX.html
+++ b/test/LaTeXAndHTML/succeed/QuickLaTeX.html
@@ -17,280 +17,160 @@
 \begin{document}
 
 </a
-      ><a name="63"
       >\begin{code}
-</a
-      ><a name="76" class="Symbol"
+<a name="76" class="Symbol"
       >{-#</a
-      ><a name="79"
-      > </a
-      ><a name="80" class="Keyword"
+      > <a name="80" class="Keyword"
       >BUILTIN</a
-      ><a name="87"
-      > SIZE </a
-      ><a name="Size" href="QuickLaTeX.html#Size" class="Postulate"
+      > SIZE <a name="Size" href="QuickLaTeX.html#Size" class="Postulate"
       >Size</a
-      ><a name="97"
-      > </a
-      ><a name="98" class="Symbol"
+      > <a name="98" class="Symbol"
       >#-}</a
-      ><a name="101"
       >
 
-</a
-      ><a name="103" class="Keyword"
+<a name="103" class="Keyword"
       >record</a
-      ><a name="109"
-      > </a
-      ><a name="Sigma" href="QuickLaTeX.html#Sigma" class="Record"
+      > <a name="Sigma" href="QuickLaTeX.html#Sigma" class="Record"
       >Sigma</a
-      ><a name="115"
-      > </a
-      ><a name="116" class="Symbol"
+      > <a name="116" class="Symbol"
       >(</a
       ><a name="117" href="QuickLaTeX.html#117" class="Bound"
       >A</a
-      ><a name="118"
-      > </a
-      ><a name="119" class="Symbol"
+      > <a name="119" class="Symbol"
       >:</a
-      ><a name="120"
-      > </a
-      ><a name="121" class="PrimitiveType"
+      > <a name="121" class="PrimitiveType"
       >Set</a
       ><a name="124" class="Symbol"
       >)</a
-      ><a name="125"
-      > </a
-      ><a name="126" class="Symbol"
+      > <a name="126" class="Symbol"
       >(</a
       ><a name="127" href="QuickLaTeX.html#127" class="Bound"
       >B</a
-      ><a name="128"
-      > </a
-      ><a name="129" class="Symbol"
+      > <a name="129" class="Symbol"
       >:</a
-      ><a name="130"
-      > </a
-      ><a name="131" href="QuickLaTeX.html#117" class="Bound"
+      > <a name="131" href="QuickLaTeX.html#117" class="Bound"
       >A</a
-      ><a name="132"
-      > </a
-      ><a name="133" class="Symbol"
+      > <a name="133" class="Symbol"
       >&#8594;</a
-      ><a name="134"
-      > </a
-      ><a name="135" class="PrimitiveType"
+      > <a name="135" class="PrimitiveType"
       >Set</a
       ><a name="138" class="Symbol"
       >)</a
-      ><a name="139"
-      > </a
-      ><a name="140" class="Symbol"
+      > <a name="140" class="Symbol"
       >:</a
-      ><a name="141"
-      > </a
-      ><a name="142" class="PrimitiveType"
+      > <a name="142" class="PrimitiveType"
       >Set</a
-      ><a name="145"
-      > </a
-      ><a name="146" class="Keyword"
+      > <a name="146" class="Keyword"
       >where</a
-      ><a name="151"
       >
-  </a
-      ><a name="154" class="Keyword"
+  <a name="154" class="Keyword"
       >coinductive</a
-      ><a name="165"
       >
-  </a
-      ><a name="168" class="Keyword"
+  <a name="168" class="Keyword"
       >constructor</a
-      ><a name="179"
-      > </a
-      ><a name="Sigma.c" href="QuickLaTeX.html#Sigma.c" class="CoinductiveConstructor"
+      > <a name="Sigma.c" href="QuickLaTeX.html#Sigma.c" class="CoinductiveConstructor"
       >c</a
-      ><a name="181"
       >
-  </a
-      ><a name="184" class="Keyword"
+  <a name="184" class="Keyword"
       >field</a
-      ><a name="189"
       >
-    </a
-      ><a name="Sigma.proj&#8321;" href="QuickLaTeX.html#Sigma.proj&#8321;" class="Field"
+    <a name="Sigma.proj&#8321;" href="QuickLaTeX.html#Sigma.proj&#8321;" class="Field"
       >proj&#8321;</a
-      ><a name="199"
-      > </a
-      ><a name="200" class="Symbol"
+      > <a name="200" class="Symbol"
       >:</a
-      ><a name="201"
-      > </a
-      ><a name="202" href="QuickLaTeX.html#117" class="Bound"
+      > <a name="202" href="QuickLaTeX.html#117" class="Bound"
       >A</a
-      ><a name="203"
       >
-    </a
-      ><a name="Sigma.proj&#8322;" href="QuickLaTeX.html#Sigma.proj&#8322;" class="Field"
+    <a name="Sigma.proj&#8322;" href="QuickLaTeX.html#Sigma.proj&#8322;" class="Field"
       >proj&#8322;</a
-      ><a name="213"
-      > </a
-      ><a name="214" class="Symbol"
+      > <a name="214" class="Symbol"
       >:</a
-      ><a name="215"
-      > </a
-      ><a name="216" href="QuickLaTeX.html#127" class="Bound"
+      > <a name="216" href="QuickLaTeX.html#127" class="Bound"
       >B</a
-      ><a name="217"
-      > </a
-      ><a name="218" href="QuickLaTeX.html#Sigma.proj&#8321;" class="Field"
+      > <a name="218" href="QuickLaTeX.html#Sigma.proj&#8321;" class="Field"
       >proj&#8321;</a
-      ><a name="223"
       >
 
-</a
-      ><a name="225" class="Keyword"
+<a name="225" class="Keyword"
       >data</a
-      ><a name="229"
-      > </a
-      ><a name="D" href="QuickLaTeX.html#D" class="Datatype"
+      > <a name="D" href="QuickLaTeX.html#D" class="Datatype"
       >D</a
-      ><a name="231"
-      > </a
-      ><a name="232" class="Symbol"
+      > <a name="232" class="Symbol"
       >:</a
-      ><a name="233"
-      > </a
-      ><a name="234" class="PrimitiveType"
+      > <a name="234" class="PrimitiveType"
       >Set</a
-      ><a name="237"
-      > </a
-      ><a name="238" class="Keyword"
+      > <a name="238" class="Keyword"
       >where</a
-      ><a name="243"
       >
-  </a
-      ><a name="D.c" href="QuickLaTeX.html#D.c" class="InductiveConstructor"
+  <a name="D.c" href="QuickLaTeX.html#D.c" class="InductiveConstructor"
       >c</a
-      ><a name="247"
-      > </a
-      ><a name="248" class="Symbol"
+      > <a name="248" class="Symbol"
       >:</a
-      ><a name="249"
-      > </a
-      ><a name="250" href="QuickLaTeX.html#D" class="Datatype"
+      > <a name="250" href="QuickLaTeX.html#D" class="Datatype"
       >D</a
-      ><a name="251"
       >
 
-</a
-      ><a name="f" href="QuickLaTeX.html#f" class="Function"
+<a name="f" href="QuickLaTeX.html#f" class="Function"
       >f</a
-      ><a name="254"
-      > </a
-      ><a name="255" class="Symbol"
+      > <a name="255" class="Symbol"
       >:</a
-      ><a name="256"
-      > </a
-      ><a name="257" class="Symbol"
+      > <a name="257" class="Symbol"
       >{</a
       ><a name="258" href="QuickLaTeX.html#258" class="Bound"
       >A</a
-      ><a name="259"
-      > </a
-      ><a name="260" class="Symbol"
+      > <a name="260" class="Symbol"
       >:</a
-      ><a name="261"
-      > </a
-      ><a name="262" class="PrimitiveType"
+      > <a name="262" class="PrimitiveType"
       >Set</a
       ><a name="265" class="Symbol"
       >}</a
-      ><a name="266"
-      > </a
-      ><a name="267" class="Symbol"
+      > <a name="267" class="Symbol"
       >{</a
       ><a name="268" href="QuickLaTeX.html#268" class="Bound"
       >B</a
-      ><a name="269"
-      > </a
-      ><a name="270" class="Symbol"
+      > <a name="270" class="Symbol"
       >:</a
-      ><a name="271"
-      > </a
-      ><a name="272" href="QuickLaTeX.html#258" class="Bound"
+      > <a name="272" href="QuickLaTeX.html#258" class="Bound"
       >A</a
-      ><a name="273"
-      > </a
-      ><a name="274" class="Symbol"
+      > <a name="274" class="Symbol"
       >&#8594;</a
-      ><a name="275"
-      > </a
-      ><a name="276" class="PrimitiveType"
+      > <a name="276" class="PrimitiveType"
       >Set</a
       ><a name="279" class="Symbol"
       >}</a
-      ><a name="280"
-      > </a
-      ><a name="281" class="Symbol"
+      > <a name="281" class="Symbol"
       >(</a
       ><a name="282" href="QuickLaTeX.html#282" class="Bound"
       >x</a
-      ><a name="283"
-      > </a
-      ><a name="284" class="Symbol"
+      > <a name="284" class="Symbol"
       >:</a
-      ><a name="285"
-      > </a
-      ><a name="286" href="QuickLaTeX.html#258" class="Bound"
+      > <a name="286" href="QuickLaTeX.html#258" class="Bound"
       >A</a
       ><a name="287" class="Symbol"
       >)</a
-      ><a name="288"
-      > </a
-      ><a name="289" class="Symbol"
+      > <a name="289" class="Symbol"
       >&#8594;</a
-      ><a name="290"
-      > </a
-      ><a name="291" href="QuickLaTeX.html#268" class="Bound"
+      > <a name="291" href="QuickLaTeX.html#268" class="Bound"
       >B</a
-      ><a name="292"
-      > </a
-      ><a name="293" href="QuickLaTeX.html#282" class="Bound"
+      > <a name="293" href="QuickLaTeX.html#282" class="Bound"
       >x</a
-      ><a name="294"
-      > </a
-      ><a name="295" class="Symbol"
+      > <a name="295" class="Symbol"
       >&#8594;</a
-      ><a name="296"
-      > </a
-      ><a name="297" href="QuickLaTeX.html#Sigma" class="Record"
+      > <a name="297" href="QuickLaTeX.html#Sigma" class="Record"
       >Sigma</a
-      ><a name="302"
-      > </a
-      ><a name="303" href="QuickLaTeX.html#258" class="Bound"
+      > <a name="303" href="QuickLaTeX.html#258" class="Bound"
       >A</a
-      ><a name="304"
-      > </a
-      ><a name="305" href="QuickLaTeX.html#268" class="Bound"
+      > <a name="305" href="QuickLaTeX.html#268" class="Bound"
       >B</a
-      ><a name="306"
       >
-</a
-      ><a name="307" href="QuickLaTeX.html#f" class="Function"
+<a name="307" href="QuickLaTeX.html#f" class="Function"
       >f</a
-      ><a name="308"
-      > </a
-      ><a name="309" class="Symbol"
+      > <a name="309" class="Symbol"
       >=</a
-      ><a name="310"
-      > </a
-      ><a name="311" href="QuickLaTeX.html#Sigma.c" class="CoinductiveConstructor"
+      > <a name="311" href="QuickLaTeX.html#Sigma.c" class="CoinductiveConstructor"
       >c</a
-      ><a name="312"
       >
-\end{code}</a
-      ><a name="323" class="Comment"
+\end{code}<a name="323" class="Comment"
       >
 
 \end{document}
