--- a/test/LaTeXAndHTML/succeed/Trailing-whitespace.html
+++ b/test/LaTeXAndHTML/succeed/Trailing-whitespace.html
@@ -19,189 +19,119 @@
 
 \hrule
 </a
-      ><a name="95"
       >\begin{code}
-</a
-      ><a name="108" class="Keyword"
+<a name="108" class="Keyword"
       >postulate</a
-      ><a name="117"
       >
   
-  </a
-      ><a name="A" href="Trailing-whitespace.html#A" class="Postulate"
+  <a name="A" href="Trailing-whitespace.html#A" class="Postulate"
       >A</a
-      ><a name="124"
-      > </a
-      ><a name="125" class="Symbol"
+      > <a name="125" class="Symbol"
       >:</a
-      ><a name="126"
-      > </a
-      ><a name="127" class="PrimitiveType"
+      > <a name="127" class="PrimitiveType"
       >Set</a
-      ><a name="130"
       >  
-  </a
-      ><a name="B" href="Trailing-whitespace.html#B" class="Postulate"
+  <a name="B" href="Trailing-whitespace.html#B" class="Postulate"
       >B</a
-      ><a name="136"
-      > </a
-      ><a name="137" class="Symbol"
+      > <a name="137" class="Symbol"
       >:</a
-      ><a name="138"
-      > </a
-      ><a name="139" class="PrimitiveType"
+      > <a name="139" class="PrimitiveType"
       >Set</a
-      ><a name="142"
       >  
-\end{code}</a
-      ><a name="155" class="Comment"
+\end{code}<a name="155" class="Comment"
       >
 \hrule
 </a
-      ><a name="163"
       >\begin{code}
   
-\end{code}</a
-      ><a name="189" class="Comment"
+\end{code}<a name="189" class="Comment"
       >
 \hrule
 </a
-      ><a name="197"
       >\begin{code}
 
-\end{code}</a
-      ><a name="221" class="Comment"
+\end{code}<a name="221" class="Comment"
       >
 \hrule
 </a
-      ><a name="229"
       >\begin{code}
-\end{code}</a
-      ><a name="252" class="Comment"
+\end{code}<a name="252" class="Comment"
       >
 \hrule
 </a
-      ><a name="260"
       >\begin{code}  
-  \end{code}</a
-      ><a name="287" class="Comment"
+  \end{code}<a name="287" class="Comment"
       >
 \hrule
   </a
-      ><a name="297"
       >\begin{code}  
-\end{code}</a
-      ><a name="322" class="Comment"
+\end{code}<a name="322" class="Comment"
       >
 \hrule
   </a
-      ><a name="332"
       >\begin{code}  
-    \end{code}</a
-      ><a name="361" class="Comment"
+    \end{code}<a name="361" class="Comment"
       >
 \hrule
 </a
-      ><a name="369"
       >\begin{code}
-</a
-      ><a name="382" class="Keyword"
+<a name="382" class="Keyword"
       >module</a
-      ><a name="388"
-      > </a
-      ><a name="389" href="Trailing-whitespace.html#389" class="Module"
+      > <a name="389" href="Trailing-whitespace.html#389" class="Module"
       >_</a
-      ><a name="390"
-      > </a
-      ><a name="391" class="Keyword"
+      > <a name="391" class="Keyword"
       >where</a
-      ><a name="396"
       >
-\end{code}</a
-      ><a name="407" class="Comment"
+\end{code}<a name="407" class="Comment"
       >
 </a
-      ><a name="408"
       >\begin{code}
   
-  </a
-      ><a name="426" class="Keyword"
+  <a name="426" class="Keyword"
       >postulate</a
-      ><a name="435"
       >
-    </a
-      ><a name="440" href="Trailing-whitespace.html#440" class="Postulate"
+    <a name="440" href="Trailing-whitespace.html#440" class="Postulate"
       >C</a
-      ><a name="441"
-      > </a
-      ><a name="442" class="Symbol"
+      > <a name="442" class="Symbol"
       >:</a
-      ><a name="443"
-      > </a
-      ><a name="444" class="PrimitiveType"
+      > <a name="444" class="PrimitiveType"
       >Set</a
-      ><a name="447"
       >
-\end{code}</a
-      ><a name="458" class="Comment"
+\end{code}<a name="458" class="Comment"
       >
 \hrule
 \begin{AgdaAlign}
 </a
-      ><a name="484"
       >\begin{code}
-</a
-      ><a name="497" class="Keyword"
+<a name="497" class="Keyword"
       >postulate</a
-      ><a name="506"
       >
-  </a
-      ><a name="F" href="Trailing-whitespace.html#F" class="Postulate"
+  <a name="F" href="Trailing-whitespace.html#F" class="Postulate"
       >F</a
-      ><a name="510"
-      >  </a
-      ><a name="512" class="Symbol"
+      >  <a name="512" class="Symbol"
       >:</a
-      ><a name="513"
-      > </a
-      ><a name="514" class="PrimitiveType"
+      > <a name="514" class="PrimitiveType"
       >Set</a
-      ><a name="517"
-      > </a
-      ><a name="518" class="Symbol"
+      > <a name="518" class="Symbol"
       >&#8594;</a
-      ><a name="519"
-      > </a
-      ><a name="520" class="PrimitiveType"
+      > <a name="520" class="PrimitiveType"
       >Set</a
-      ><a name="523"
       >
-  </a
-      ><a name="X" href="Trailing-whitespace.html#X" class="Postulate"
+  <a name="X" href="Trailing-whitespace.html#X" class="Postulate"
       >X</a
-      ><a name="527"
-      >  </a
-      ><a name="529" class="Symbol"
+      >  <a name="529" class="Symbol"
       >:</a
-      ><a name="530"
-      > </a
-      ><a name="531" href="Trailing-whitespace.html#F" class="Postulate"
+      > <a name="531" href="Trailing-whitespace.html#F" class="Postulate"
       >F</a
-      ><a name="532"
       >  
-\end{code}</a
-      ><a name="545" class="Comment"
+\end{code}<a name="545" class="Comment"
       >
 </a
-      ><a name="546"
       >\begin{code}
-          </a
-      ><a name="569" href="Trailing-whitespace.html#A" class="Postulate"
+          <a name="569" href="Trailing-whitespace.html#A" class="Postulate"
       >A</a
-      ><a name="570"
       >
-\end{code}</a
-      ><a name="581" class="Comment"
+\end{code}<a name="581" class="Comment"
       >
 \end{AgdaAlign}
 \hrule
