--- a/test/LaTeXAndHTML/succeed/UnicodeInput.html
+++ b/test/LaTeXAndHTML/succeed/UnicodeInput.html
@@ -15,50 +15,30 @@
 \begin{document}
 
 </a
-      ><a name="61"
       >\begin{code}
-</a
-      ><a name="74" class="Keyword"
+<a name="74" class="Keyword"
       >data</a
-      ><a name="78"
-      > </a
-      ><a name="&#945;&#946;&#947;&#948;&#949;&#950;&#952;&#953;&#954;&#955;&#956;&#957;&#958;&#961;&#963;&#964;&#965;&#966;&#967;&#968;&#969;" href="UnicodeInput.html#&#945;&#946;&#947;&#948;&#949;&#950;&#952;&#953;&#954;&#955;&#956;&#957;&#958;&#961;&#963;&#964;&#965;&#966;&#967;&#968;&#969;" class="Datatype"
+      > <a name="&#945;&#946;&#947;&#948;&#949;&#950;&#952;&#953;&#954;&#955;&#956;&#957;&#958;&#961;&#963;&#964;&#965;&#966;&#967;&#968;&#969;" href="UnicodeInput.html#&#945;&#946;&#947;&#948;&#949;&#950;&#952;&#953;&#954;&#955;&#956;&#957;&#958;&#961;&#963;&#964;&#965;&#966;&#967;&#968;&#969;" class="Datatype"
       >&#945;&#946;&#947;&#948;&#949;&#950;&#952;&#953;&#954;&#955;&#956;&#957;&#958;&#961;&#963;&#964;&#965;&#966;&#967;&#968;&#969;</a
-      ><a name="100"
-      > </a
-      ><a name="101" class="Symbol"
+      > <a name="101" class="Symbol"
       >:</a
-      ><a name="102"
-      > </a
-      ><a name="103" class="PrimitiveType"
+      > <a name="103" class="PrimitiveType"
       >Set&#8321;</a
-      ><a name="107"
-      > </a
-      ><a name="108" class="Keyword"
+      > <a name="108" class="Keyword"
       >where</a
-      ><a name="113"
       >
 
-</a
-      ><a name="115" class="Keyword"
+<a name="115" class="Keyword"
       >postulate</a
-      ><a name="124"
       >
-  </a
-      ><a name="&#8594;&#8658;&#8667;&#8649;&#8644;&#8614;&#8680;&#8608;&#8640;&#8641;" href="UnicodeInput.html#&#8594;&#8658;&#8667;&#8649;&#8644;&#8614;&#8680;&#8608;&#8640;&#8641;" class="Postulate"
+  <a name="&#8594;&#8658;&#8667;&#8649;&#8644;&#8614;&#8680;&#8608;&#8640;&#8641;" href="UnicodeInput.html#&#8594;&#8658;&#8667;&#8649;&#8644;&#8614;&#8680;&#8608;&#8640;&#8641;" class="Postulate"
       >&#8594;&#8658;&#8667;&#8649;&#8644;&#8614;&#8680;&#8608;&#8640;&#8641;</a
-      ><a name="137"
-      > </a
-      ><a name="138" class="Symbol"
+      > <a name="138" class="Symbol"
       >:</a
-      ><a name="139"
-      > </a
-      ><a name="140" class="PrimitiveType"
+      > <a name="140" class="PrimitiveType"
       >Set</a
-      ><a name="143"
       >
-\end{code}</a
-      ><a name="154" class="Comment"
+\end{code}<a name="154" class="Comment"
       >
 
 \[
